--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -426,12 +426,22 @@
 ##### 14. **TCP报文段首部有哪些字段？**
 
 + 从前往后分别是
-  + 源端口号 (2 bytes)，目的端口号 (2 bytes)
-  + 序号  (4 bytes)
-  + 确认号  (4 bytes)
-  + 数据偏移， 保留，紧急URG，确认ACK，推送PSH，复位RST，同步SYN，终止FIN，窗口 (2 bytes)
-  + 检验和  (2 bytes)，紧急指针 (2 bytes)
-  + 选项字段 ，填充(首部是4字节的整数倍)
+  + 源端口号 (2 bytes)；目的端口号 (2 bytes)
+  + 序号  (4 bytes)：TCP 连接中传送的数据流的序号。序号字段的值是报文段所发送数据的第一个字节的序号。
+  + 确认号  (4 bytes)：期望收到对方下一个报文数据中第一个字节的序号。
+  + 数据偏移 (4 bits)：TCP 报文段的数据起始处距离 TCP 报文段的起始处有多远
+  +  保留 (6 bits)：保留为今后使用，但目前应置为 0。
+  + 紧急URG (1 bits)：当 URG=1 表明 **紧急指针** 有效，此报文段中有紧急数据，应尽快传送(相当于高优先级的数据)
+  + 确认ACK (1 bits)：ACK=1 时确认号字段才有效。当 ACK =0 时，确认号无效。
+  + 推送PSH (1 bits)： PSH=1 表示应尽快地交付接收应用进程，而不再等到整个缓存都填满了后再向上交付。
+  + 复位RST (1 bits)： RST=1 表明 TCP 连接中出现严重差错，必须释放连接，然后再重新建立运输连接。
+  + 同步SYN (1 bits)：SYN=1 表示这是一个连接请求或连接接受报文。
+  + 终止FIN (1 bits)：用来释放一个连接。FIN=1 表明此报文段的发送端的数据已发送完毕，并要求释放运输连接。
+  + 窗口 (2 bytes)：用来让对方设置发送窗口的依据，单位为字节。
+  + 检验和  (2 bytes)：检验和字段检验的范围包括首部和数据这两部分
+  + 紧急指针 (2 bytes)：指出在本报文段中紧急数据共有多少个字节（紧急数据放在本报文段数据的最前面）
+  + 选项字段 ：长度可变
+  + 填充(首部是4字节的整数倍)： 使整个首部长度是 4 字节的整数倍
 
 ##### 15. **TCP 头部有哪些信息？具体什么作用？**
 
@@ -528,7 +538,19 @@
 
 ##### 24. **TCP连接建立过程中要解决哪些问题？**
 
+- 要使每一方都能够确知对方的存在。
+- 要允许双方协商一些参数(如最大窗口值，是否使用窗口扩大选项和时间戳选项以及服务质量等)。
+- 能够对运输实体资源(如缓存大小，连接表中的项目等)进行分配。
+
+---
+
 ##### 25.  **TCP链接建立过程**
+
++ 首先服务器端进程创建运输控制块TCB，处于 LISTEN(监听) 状态，等待客户端的链接到来
++ 客户端进程创建运输控制块TCB，想要建立TCB连接时， 向服务器端发送 TCB请求报文， 报文首部中的 同部位SYN=1，同时初始化序列号 seq=x， SYN报文中不能携带数据，但需要消耗一个序号。此时客户端处于 SYN-SENT(同步已发送)状态。
++ 服务器端接收到请求报文后，如果同意建立TCB连接，想客户端发送ACK确认报文报文首部中的 同部位SYN=1，ACK=1，同时初始化序列号 seq=y，确认序列 ack=x+1，此时报文中也不能携带数据，需要消耗一个序列号，此时服务器端处于 SYN-RECV(同步收到) 状态。
++ 客户端收到服务器端的确认后，需要向服务器端发送确认报文，报文中 ACK=1，SYN序列 seq=x+1，确认序列 ack=y+1。此时的确认报文可以携带数据，如果不需要携带，则不消耗序列号。此时客户端进入 ESTABLISHED 状态
++ 服务器端接收到确认报文后，也进入ESTABLISHED状态，TCP连接建立完成。
 
 ---
 
@@ -542,7 +564,7 @@
 
 ##### 27. **TCP建立连接为什么是三次握手，而不是两次或四次？**
 
-+ TCP 建立连接时，通过三次握手能防止历史连接的建立，能减少双方不必要的资源开销，能帮助双方同步初始化序 列号。序列号能够保证数据包不重复、不丢弃和按序传输。
++ TCP 建立连接时，通过三次握手能防止历史连接的建立，能减少双方不必要的资源开销，能帮助双方同步初始化序列号。序列号能够保证数据包不重复、不丢弃和按序传输。
 + 不使用「两次握手」和「四次握手」的原因:
   + 「两次握手」:无法防止历史连接的建立，会造成双方资源的浪费，也无法可靠的同步双方序列号; 
   + 「四次握手」:三次握手就已经理论上最少可靠连接建立，所以不需要使用更多的通信次数。
@@ -570,27 +592,35 @@
 > +  **MTU :** 一个网络包的最大⻓度，以太网中一般为 1500 字节;
 > +  **MSS :** 除去 IP 和 TCP 头部之后，一个网络包所能容纳的 TCP 数据的最大⻓度;
 
-+ 将 TCP 的整个报文(头部 + 数据)交给 IP 层进行分片的话，如果一个 **IP** 分片丢失，整个 **IP** 报文的所有分片都得重传。 因为 IP 层本身没有超时重传机制，它由传输层的 TCP 来负责超时和重传。
-+ 当接收方发现 TCP 报文(头部 + 数据)的某一片丢失后，则不会响应 ACK 给对方，那么发送方的 TCP 在超时 后，就重会发「整个 TCP 报文(头部 + 数据)」。非常没有效率。
++ 将 TCP 的整个报文(头部 + 数据)交给 IP 层进行分片的话，如果一个 **IP** 分片丢失，整个 **IP** 报文的所有分片都得重传。  IP 层本身没有超时重传机制，由传输层的 TCP 来负责超时和重传。
++ 当接收方发现 TCP 报文(头部 + 数据)的某一片丢失后，则不会响应 ACK 给对方，那么发送方的 TCP 在超时后，就重会发「整个 TCP 报文(头部 + 数据)」。非常没有效率。
 + 为了达到最佳的传输效能， TCP 协议在建立连接的时候通常要协商双方的 **MSS** 值，当 TCP 层发现数据超过 MSS 时，则就先会进行分片，经过 TCP 层分片后，如果一个 TCP 分片丢失后，进行重发时也是以 **MSS** 为单位，而不用传所有 的分片，大大增加了重传的效率。
 
 ---
 
 ##### 31. **什么是SYN攻击？**
 
-+ 因为 TCP 连接建立是需要三次握手，假设攻击者短时间伪造不同 IP 地址的 SYN 报文，服务端每接收到 一个 SYN 报文，就进入 SYN_RCVD 状态，但服务端发送出去的 ACK + SYN 报文，无法得到未知 IP 主机的 ACK 应答，久而久之就会占满服务端的 **SYN** 接收队列(未连接队列)，使得服务器不能为正常用户服务。
++ 攻击者短时间伪造不同 IP 地址的 SYN 请求报文，服务端每接收到一个 SYN 报文就进入 SYN_RCVD 状态，但服务端发送出去的 ACK + SYN 报文，无法得到未知 IP 主机的 ACK 应答，久而久之就会占满服务端的未连接队列，使得服务器不能为正常用户服务。
 
 ---
 
 ##### 32. **如何避免SYN攻击？**
 
-+ 修改 Linux 内核参数，控制队列大小和当队列满时应做相应的处理。
-  + 当网卡接收数据包的速度大于内核处理的速度时，会有一个队列保存这些数据包。超出处理能时，对新的 SYN 直接回报 RST，丢弃连接。
-  + tcp_syncookies 的方式可以应对 SYN 攻击的方法: net.ipv4.tcp_syncookies = 1
++ 修改 Linux 内核参数，控制队列大小和队列满时相应的处理。
+  + 当网卡接收数据包的速度大于内核处理的速度时，会有一个队列保存这些数据包。超出处理能时，对新的 SYN 直接回报 RST 复位包、丢弃连接。
 
 ---
 
 ##### 33. **TCP链接释放的过程**
+
++ 客户端进程向服务器端发送释放连接的报文，其中 FIN=1，初始化序列号seq=u，并停止发送数据，主动关闭TCP连接，进入 **FIN-WAIT1终止等待1** 状态，等待服务器端的确认。
++ 服务器端收到客户端的释放连接报文后，发送确认报文，其中ACK=1，序列号seq=v，确认报文ack=u+1，服务器端进入 **CLOSE_WAIT关闭等待** 状态，此时TCP处于半关闭状态，客户端到服务器端的链接释放。
++ 客户端在接收到服务器端的确认报文后，进入 **FIN_WAIT2终止等待2** 状态，等待服务器端发送连接释放报文
++ 等到服务器端没有需要向客户端发送的数据时，发送连接释放报文，其中FIN=1，ACK=1，序列号seq=w，确认序列ack=u+1，服务器端进入 **LAST_ACK最后确认** 状态，等待客户端的确认
++ 客户端收到服务器端的释放连接报文后，发出确认报文，其中ACK=1，序列号seq=u+1，确认序列ack=w+1，客户端进入 **TIME_WAIT时间等待** 状态。经过时间 **2MSL** 后，客户端进入 **CLOSED** 状态。
++ 服务器端收到确认报文后，也进入 **CLOSED** 状态。
+
+---
 
 ##### 34. **释放连接为什么需要四次挥手？**
 
@@ -630,24 +660,21 @@
 
 ##### 37. **为什么需要 TIME_WAIT 状态?**
 
-+  防止旧连接的数据包，经过 2MSL 这个时间，足以让两个方向上的数据包都被丢弃，使得数据包在网络中都自然消失，再出现的数据包一定都是新建立连接所产生的。
-
-+  保证「被动关闭连接」的一方能被正确的关闭，即保证最后的 ACK 能让被动关闭方接收，从而帮助其正常关闭；
-
-   > 若客户端四次挥手的最后一个 ACK 报文如果在网络中被丢失了，此时如果客户端 TIME-WAIT 过短或没有，则就直接进入了 CLOSED 状态了，那么服务端则会一直处在 LASE_ACK 状态。
++  消除旧连接的数据包，经过 2MSL 时间两个方向上的数据包都会在网络中自然消失，再出现的数据包一定都是新建立连接所产生的。
++  如果没有 TIME_WAIT状态，服务端如果没有接收到最后一次ACK包，会在超时之后重新再发FIN包，但此时客户端已经CLOSED，服务端就不会收到ACK而是收到RST。 服务端则会一直处在 LASE_ACK 状态。
 
 ---
 
 ##### 38. **为什么 TIME_WAIT 等待的时间是 2MSL?**
 
-+  网络中可能存在来自发送方的数据包，当这些数据包被接收方处理后又会向对方发送响应，所以一来一回需要等待 **2** 倍的时间。
-+ 在 Linux 系统里 2MSL 默认是 60 秒，那么一个 MSL 也就是 30 秒。**Linux** 系统停留在 **TIME_WAIT** 的时 间为固定的 **60** 秒。
++  网络中可能存在来自发送方的数据包，当这些数据包被接收方处理后又会向对方发送响应，一来一回需要等待 **2** 倍的时间。
++ 在 Linux 系统里 2MSL 默认是 60 秒，那么一个 MSL 也就是 30 秒。**Linux** 系统停留在 **TIME_WAIT** 的时间为固定的 **60** 秒。
 
 ---
 
 ##### 39. **可以解释一下 ** **RTO** **，** **RTT** **和超时重传分别是什么吗?**
 
-+ 超时重传： 发送端发送报文后若长时间未收到确认的报文则需要重发该报文。可能有以下几种情况:
++ 超时重传： 发送端发送报文后若长时间未收到确认则需要重发该报文。可能有以下几种情况:
   + 发送的数据没能到达接收端，所以对方没有响应。 
   + 接收端接收到数据，但是ACK报文在返回过程中丢失。 
   + 接收端拒绝或丢弃数据。
@@ -667,7 +694,7 @@
 + 危害：
 
   +  客户端TIME_WAIT过多，就会导致端口资源被占用，被占满就会导致无法创建新的连接。
-  +  服务端只监听一个端口，但是会把连接扔给处理线程，所以理论上监听的端口可以继续监听。但是当服务端出现大量 TIME_WAIT 时，系统资源被占满时，会导致处理不过来新的连接。
+  +  服务端只监听一个端口，但是会把连接扔给处理线程，理论上监听的端口可以继续监听。但是当服务端出现大量 TIME_WAIT 时，系统资源被占满时，会导致处理不过来新的连接。
 
 +  处理方法：
 
@@ -719,7 +746,7 @@
 + **“**停止等待**”**就是每发送完一个分组就停止发送，等待对方的确认。在收到确认后再发送下一个分组。
 + 发送方如何知道对方正确收到消息的？
   + 每一个已发送的分组都设置了一个超时计时器。 只要在超时计时器到期之前收到了相应的确认，就撤销该超时计时器，继续发送下一个分组 ，否则重发
-+ 如何知道收到 了重复的分组，需要丢弃呢？
++ 如何知道收到了重复的分组，需要丢弃呢？
   + 每一个发送的分组都进行编号。接收方收到了编号相同的分组，则认为收到了重复分组，会进行丢弃，并回送确认
   + 发送方也为发送的确认也进行编号，指示该确认是对哪一个分组的确认。
   + 接收方根据确认其编号，可以确定它是对哪一个分组的确认，避免重发发送。若为重复的确认，则将其丢弃。
@@ -730,10 +757,10 @@
 ##### 44. **介绍一下 连续ARQ协议**
 
 + 发送方设置
-  + 发送方设置发送窗口，将发送窗口中的分组连续发送出去，而不用等待对方的确认，提高了信道利用率
-  + 发送方没接收到一个确认，就会把发送窗口向前滑动一个分组的位置
+  + 发送方设置发送窗口，将发送窗口中的分组连续发送出去，而不用逐个等待对方的确认，提高了信道利用率
+  + 发送方每接收到一个确认，就会把发送窗口向前滑动一个分组的位置
 + 接收方设置
-  + 不需要对每一个分组逐个发送确认，只需对按序到达的最后一个分组发送确认，表示到这个分组为止的所有分组都已正确收到。
+  + 不需要逐个发送确认，只需对按序到达的最后一个分组发送确认，表示到这个分组为止的所有分组都已正确收到。
 + 回退N机制：如果发送方发送了前 5 个分组，而中间的第 **3** 个分组丢失了。这时接收方只能对前两个分组发出确认。发送方无法知道后面三个分组的下落，而只好把后面的三个分组都再重传一次。 
 + 优点：容易实现，即使确认丢失也不必重传
 + 缺点：不能向发送方反映出接收方已经正确收到的所有分组的信息。
@@ -764,13 +791,16 @@
   + 设置一个慢开始⻔限 ssthresh，当 cwnd >= ssthresh 时，进入拥塞避免，每个轮次只将 cwnd 加 1
   + 如果出现了**==超时==**，则令 ssthresh = cwnd / 2，然后重新执行慢开始。
 
-+ 快重传与快恢复
++  **快重传与快恢复**
 
   + 在接收方，要求每次接收到报文段都应该对最后一个已收到的有序报文段进行确认。例如已接收到 M1，M2，此时收到 M4，应当发送对 M2 的确认。 
   + 在发送方，如果收到三个重复确认，则知道下一个报文段丢失，应执行快重传，立即重传下一个报文段。例如收到三个 M2，则 M3 丢失，立即重传 M3。
   + 在这种情况下，只是**==丢失==**个别报文段，而不是网络拥塞。因此执行快恢复，令 ssthresh = cwnd / 2 ，cwnd = ssthresh，注意到此时直接进入拥塞避免。
 
 > 区分好 两者的区别和使用场景。
+>
+> +  发生超时：说明对方的确认包发不过来，说明网络拥堵，则进行慢开始和拥塞避免
+> + 发生丢失：说明重复三次ACK，有丢失，则进行快重传和快恢复，避免拥塞。
 
 ---
 
@@ -3033,8 +3063,6 @@ int main() {
 
 ### 1.Mysql
 
-+ 索引分类和原理----B+树，具体分析
-
 + 数据库锁有哪些，造成原因
 
 + 如果在数据库上进行了误操作该怎么处理
@@ -3052,7 +3080,7 @@ int main() {
 #####   1. **你知道关系型和非关系型数据库吗？区别了解多少?**
 
 + 关系型数据库
-  + 采用关系模型来组织数据的数据库。简单来说，关系模式就是二维表格模型。代表：SQL Server,Oracle,Mysql
+  + 采用关系模型来组织数据的数据库。关系模式简单来说就是二维表格模型。代表：SQL Server,Oracle,Mysql
   + 优点：
     + 容易理解，二维表的结构非常贴近现实世界，二维表格，容易理解。
     + 使用方便，通用的sql语句使得操作关系型数据库非常方便。
@@ -3071,7 +3099,7 @@ int main() {
 
 ---
 
-##### 说一下MySQL是如何执行一条SQL的?具体步骤有哪些?
+##### 2. 说一下MySQL是如何执行一条SQL的?具体步骤有哪些?
 
 1. 客户端请求->
 2. 连接器 (验证用户身份，给予权限) ->
@@ -3083,7 +3111,7 @@ int main() {
 
 ---
 
-##### **你了解MySQL的内部构造吗?**
+#####  **你了解MySQL的内部构造吗?**
 
 以分为服务层和存储引擎层两部分：
 
@@ -3092,12 +3120,78 @@ int main() {
 
 ---
 
-##### MySQL优化了解吗?说一下从哪些方面可以做到性能优化?
+##### 数据库引擎InnoDB与MyISAM的区别
+
+
+
+
+
+---
+
+##### 数据库并发事务会带来什么问题
+
+数据库并发会带来脏读、幻读、丢弃更改、不可重复读这四个常见问题，其中:
+
++  **脏读** :在第一个修改事务和读取事务进行的时候，读取事务读到的数据为100，这是修改之后的数据， 但是之后该事务满足一致性等特性而做了回滚操作，那么读取事务得到的结果就是脏数据了。
++  **幻读** ：一般是T1在某个范围内进行修改操作(增加或者删除)，而T2读取该范围导致读到的数据是修改之间的了，强调范围。
++  **丢弃修改** : 两个写事务T1，T2同时对A=0进行递增操作，结果T2覆盖T1，导致最终结果是1 而不是2，事务被覆盖
++  **不可重复读** : T2 读取一个数据，然后T1 对该数据做了修改。如果 T2 再次读取这个数据，此时读取的 结果和第一次读取的结果不同。
+
+---
+
+##### **不可重复读和幻读区别是什么?可以举个例子吗?**
+
++  **不可重复读的重点是修改，幻读的重点在于新增或者删除。**
+  + (同样的条件, 读取过的数据, 再次读取出来发现值不一样了 ):事务1中的A先生读取自己的工资为 1000的操作还没完成，事务2中的B先生就修改了A的工资为2000，导致A再读自己的工资时工资 变为 2000 ;这就是不可重复读。
+  + (同样的条件, 第1次和第2次读出来的记录数不一样 ):假如工资单表中工资大于3000的有4人， 事务1读取了所有工资大于3000的人共查到4条记录，这时事务2又插入了一条工资大于3000的记录，事务1再次读取时查到的记录就变为了5条，这样就导致了幻读。
+
+---
+
+##### **数据库悲观锁和乐观锁的原理和应用场景分别有什么?**
+
++  悲观锁，先获取锁，再进行业务操作，一般就是利用类似 SELECT ... FOR UPDATE 这样的语句，对数据加锁，避免其他事务意外修改数据。
+  + 当数据库执行SELECT ... FOR UPDATE时会获取被select中的数据行的行锁，select for update获取的行锁会在当前事务结束时自动释放，因此必须在事务中使用。
++ 乐观锁，先进行业务操作，只在最后实际更新数据时进行检查数据是否被更新过。腾讯上的电子文档
+
+---
+
+##### **MyISAM和InnoDB实现B树索引方式的区别是什么?**
+
++ MyISAM，B+Tree叶节点的data域存放的是数据记录的地址，在索引检索的时候，首先按照B+Tree搜 索算法搜索索引，如果指定的key存在，则取出其data域的值，然后以data域的值为地址读取相应的数 据记录，这被称为“非聚簇索引”
++ InnoDB，其数据文件本身就是索引文件，相比MyISAM，索引文件和数据文件是分离的，其表数据文件本身就是按B+Tree组织的一个索引结构，树的节点data域保存了完整的数据记录，这个索引的 key是数据表的主键，因此InnoDB表数据文件本身就是主索引，这被称为“聚簇索引”或者聚集索引， 而其余的索引都作为辅助索引，辅助索引的data域存储相应记录主键的值而不是地址，这也是和 MyISAM不同的地方。
++ 在根据主索引搜索时，直接找到key所在的节点即可取出数据;在根据辅助索引查找时，则需要先取 出主键的值，再走一遍主索引。因此，在设计表的时候，不建议使用过长的字段为主键，也不建议使 用非单调的字段作为主键，这样会造成主索引频繁分裂。
+
+---
+
+##### **Innodb为什么要用自增id作为主键?**
+
++ 使用自增主键，每次插入新的记录时会顺序添加到当前索引节点的后续位置，当一页写满，就会自动开辟一个新的页
++ 使用非自增主键(如果身份证号或学号等)，由于每次插入主键的值近似于随机，每次新纪录都要被插到现有索引页得中间某个位置， 频繁的移动、分页操作造成了大量的碎片，形成不够紧凑的索引结构，后续不得不通过optimize table来重建表并优化填充页面。
+
+---
+
+#####  MySQL优化了解吗?说一下从哪些方面可以做到性能优化?
 
 + 为搜索字段创建索引
 + 避免使用 Select *，列出需要查询的字段 
 + 垂直分割分表
 + 选择正确的存储引擎
+
+---
+
+##### **数据库中的主键、超键、候选键、外键是什么?**
+
++  **超键** : 在关系中能唯一标识 **元组的属性集** 称为关系模式的超键 
++  **候选键** : 不含有 **多余属性的超键** 称为候选键。也就是在候选键中，若再删除属性，就不是键了!
++  **主键** : **用户选作元组标识的一个候选键程序主键**
++  **外键** : 如果关系模式 **R中属性K是其它模式的主键** ，那么 **k在模式R中称为外键** 。
+
+在学生表中：
+
+1. 超键 : 学号是标识学生实体的唯一标识。那么该元组的超键就为学号。 除此之外还可以把它跟其他属性组合起来，比如:(学号，性别)，(学号，年龄)
+2. 候选键：学号是一个可以唯一标识元组的唯一标识，因此学号是一个候选键，实际上，候选键是超键的子集，比如 (学号，年龄)是超键，但是它不是候选键。因为它还有了额外的 属性。
+3. 主键：元组的候选键为学号，但是我们选定他作为该元组的唯一标识，那么学号就为主键。
+4. 外键：是相对于主键的，比如在学生记录里，主键为学号，在成绩单表中也有学号字段，因此学号为成绩单表的外键，为学生表的主键。
 
 ---
 
@@ -3110,6 +3204,13 @@ int main() {
   +  **Drop** ：命令从数据库中删除表，所有的数据行，索引和权限也会被删除，所有的DML触发器也不会被触 发，这个命令也不能回滚。
 
   删除部分数据行用Delete；在保留表而删除所有数据用Truncate。不再需要一张表用Drop；
+
+---
+
+##### **SQL中的NOW()和CURRENT_DATE()两个函数有什么区别?**
+
++ NOW()命令用于显示当前年份，月份，日期，小时，分钟和秒。
++ CURRENT_DATE()仅显示当前年份，月份和日期
 
 ---
 
@@ -3185,11 +3286,123 @@ int main() {
 
 ---
 
-##### 索引的分类与原理以及应用场景
+##### **什么时候需要建立数据库索引呢?**
+
++ 在最频繁使用的、用以缩小查询范围的字段,需要排序的字段上建立索引。 
++ 不宜:
+  + 1)对于查询中很少涉及的列或者重复值比较多的列 
+  + 2)对于一些特殊的数据类型，不宜建立索引，比如文本字段(text)等。
+
+---
+
+##### MYSQL中有哪些索引？有什么特点？
+
++  **普通索引** ：是MySQL中的基本索引类型，允许在定义索引的列中插入重复值和空值；仅加速查询
++  **唯一索引** ：索引列的值必须唯一，但允许有空值。加速查询 + 列值唯一(可以有null)
++  **主键索引** ：加速查询 + 列值唯一(不可以有null) + 表中只有一个 **组合索引** ：多列值组成一个索引，专门用于组合搜索，其效率大于索引合并
++  **全文索引** ：全文索引类型为FULLTEXT，在定义索引的列上支持值的全文查找，允许在这些索引列中插入重复值和空值。对文本的内容进行分词，进行搜索
++  **索引合并** ：使用多个单列索引组合搜索 
++  **覆盖索引** ：select的数据列只用从索引中就能够取得，不必读取数据行，换句话说查询列要被所建的 索引覆盖 
++  **聚簇索引** ：表数据是和主键一起存储的，主键索引的叶结点存储行数据(包含了主键值)，二级索引的 叶结点存储行的主键值。使用的是B+树作为索引的存储结构，非叶子节点都是索引关键字，但非叶 子节点中的关键字中不存储对应记录的具体内容或内容地址。叶子节点上的数据是主键与具体记录 (数据内容)
+
+---
+
+##### **覆盖索引是什么?**
+
++  如果一个索=引包含(或者说覆盖)所有需要查询的字段的值，我们就称 之为“覆盖索引”。
+
++  在InnoDB存储引擎中，如果不是主键索引，叶子节点存储的是主键+列值。最终还是要“回表”，也就是要通过主键再查找一次,这样就会比较慢。覆盖索引就是把要查询出的列和索引是对应的，不做回表操作!
+
+---
+
+#####  **什么是聚合索引 ?**
+
++ 聚簇索引就是按照拼音查询，非聚簇索引就是按照偏旁等来进行查询。
++ 其实，我们的汉语字典的正文本身就是一个聚集索引。比如，我们要查"安"字，就会很自然地翻开字典 的前几页，因为"安"的拼音是"an"，而按照拼音排序 汉字的字典是以英文字母"a"开头并以"z"结尾的， 那么"安"字就自然地排在字典的前部。如果您翻完了所有以"a"开头的部分仍然找不到这个字，那么就 说明您的字典中没有这个字;同样的，如果查"张"字，那您也会将您的字典翻到最后部分，因为"张"的 拼音是"zhang"。也就是说，字典的正文部分本身 就是一个目录，您不需要再去查其他目录来找到您需 要找的内容。
+
+---
+
+##### **什么是非聚合索引？**
+
+如果您认识某个字，您可以快速地从自动中查到这个字。但您也可能会遇到您不认识的字，不知道它的 发音，这时候，您就不能按照刚才的方法找到您要查的字，而 需要去根据"偏旁部首"查到您要找的字， 然后根据这个字后的页码直接翻到某页来找到您要找的字。但您结合"部首目录"和"检字表"而查到的字 的排序并不是 真正的正文的排序方法，比如您查"张"字，我们可以看到在查部首之后的检字表中"张"的 页码是672页，检字表中"张"的上面是"驰"字，但页码却是63 页，"张"的下面是"弩"字，页面是390页。 很显然，这些字并不是真正的分别位于"张"字的上下方，现在您看到的连续的"驰、张、弩"三字实际上 就是他 们在非聚集索引中的排序，是字典正文中的字在非聚集索引中的映射。我们可以通过这种方式来 找到您所需要的字，但它需要两个过程，先找到目录中的结果，然后 再翻到您所需要的页码。
+
+**我们把这种目录纯粹是目录，正文纯粹是正文的排序方式称为"非聚集索引"。**
+
+---
+
+##### **聚集索引与非聚集索引的区别是什么?**
+
++ 非聚集索引和聚集索引的区别在于， 通过聚集索引可以查到需要查找的数据， 而通过非聚集索引可以 查到记录对应的主键值 ， 再使用主键的值通过聚集索引查找到需要的数据。 聚集索引和非聚集索引的根本区别是表记录的排列顺序和与索引的排列顺序是否一致。
++ 聚集索引(Innodb)的叶节点就是数据节点，而非聚集索引(MyisAM)的叶节点仍然是索引节点，只不 过其包含一个指向对应数据块的指针。
+
+---
+
+##### MySQL索引主要使用的两种数据结构是什么?
+
++ **哈希索引** ，对于哈希索引来说，底层的数据结构肯定是哈希表，因此 **在绝大多数需求为单条记录查询** 的时候，可以选择哈希索引，查询性能最快；其余大部分场景，建议选择BTree索引
+
++  **BTree索引** ，Mysql的BTree索引的是B+Tree，BTREE索引就是一种将索引值按一定的算法，存入一个树形的数据结构中(二叉树)，每次查询都是从树的入口root开始，依次遍历node，获取leaf。
+
+但对于主要的两种存储引擎(MyISAM和InnoDB)的实现方式是不同的。
+
+---
+
+##### **为什么MySQL索引要使用B+树，而不是B树或者红黑树?**
 
 
 
 ---
+
+##### **为什么MySQL索引适用用B+树而不用hash表和B树?**
+
+
+
+---
+
+##### **既然Hash比B+树更快，为什么MySQL用B+树来存储索引呢?**
+
+
+
+---
+
+##### 文件索引和数据库索引为什么使用B+树?(第9个问题的详细回答)
+
+
+
+
+
+---
+
+**为什么说B+tree比B 树更适合实际应用中操作系统的文件索引和数据库索引?**
+
++ B+tree的磁盘读写代价更低，B+tree的查询效率更加稳定 
++ 主要原因：B+树只要遍历叶子节点就可以实现整棵树的遍历，而且在 数据库中基于范围的查询是非常频繁的，而B树只能中序遍历所有节点，效率太低。
++ **B+树的特点**
+  + 所有关键字都出现在叶子结点的链表中(稠密索引)，且链表中的关键字恰好是有序的；不可能在非叶子结点命中；非叶子结点相当于是叶子结点的索引(稀疏索引)，叶子结点相当于是存储(关键字)数据的数据层
+
+
+
+
+
+
+
+---
+
+##### **听说过视图吗?那游标呢?**
+
++ 视图是一种虚拟的表，通常是有一个表或者多个表的行或列的子集，具有和物理表相同的功能 
++ 游标是对查询出来的结果集作为一个单元来有效的处理。一般不使用游标，但是需要逐条处理数据的时候，游标显得十分重要。
+
+---
+
+##### 数据库高并发是我们经常会遇到的，你有什么好的解决方案吗?
+
++ 在web服务框架中加入缓存。在服务器与数据库层之间加入缓存层，将高频访问的数据存入缓存中， 减少数据库的读取负担。 
++ 增加数据库索引，进而提高查询速度。(不过索引太多会导致速度变慢，并且数据库的写入会导致索 引的更新，也会导致速度变慢)
+
++ 主从读写分离，让主服务器负责写，从服务器负责读。
++ 将数据库进行拆分，使得数据库的表尽可能小，提高查询的速度。
++ 使用分布式架构，分散计算压力。
 
 
 
