--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -36,26 +36,6 @@
 + 给定一组整数1000以内，如何高效去除重复的数
 + 字符串中查找是否有子串，写完以后要求给出测试用例
 
-### 链表
-
-+  **从尾到头打印链表**
-   + 反转链表；打印后反转；使用栈
-+  **链表中倒数最后k个结点**
-   + 双指针：一个先行，一个后行
-+  **反转链表**
-   +  双指针： 不停反转，直到链尾
-+  **合并两个有序链表**
-   + 双指针：
-+  **复杂链表的复制**
-   + 双指针
-+  **两个链表的第一个公共结点**
-   +  双指针：设置 p1,p2分别指向各自链表进行前行，遇到链尾时指向对方链头，知道双方结点相同。
-+  **链表中环的入口结点**
-   + 双指针：设置快慢指针fast,slow，相遇表示有环；设置指针p指向head，p与slow相遇，则是入环结点。
-
-+  **删除链表中重复的结点**
-   +  双指针：
-
 
 
 ##  二 .C++
@@ -113,9 +93,6 @@
 ---
 
 +  struct和union的区别
-+  介绍auto,主要是会覆盖顶层的引用和修饰。
-+  如果要保留顶层的引用和修饰要用什么？decltype
-+  什么是字节对齐
 +  知道虚函数表指针在内存中是怎么分布的吗？(我直接按照Lippman那本书回答)。
 +  虚函数表指针放在头部和尾部的好处分别是什么？(自己挖的坑。。)
 
@@ -199,159 +176,29 @@
 
 ---
 
-### 7.C++中const和static的作用
-
-#### **static**
-
-**:diamonds:  不考虑类的情况**
-
-:small_blue_diamond: **存储区：**
-
-+ 静态变量都在全局数据区分配内存，包括静态局部变量。
-
-  > 一般程序的由new产生的动态数据存放在堆区，函数内部的自动变量存放在栈区。自动变量一般会随着函数的退出而释放空间，静态数据（即使是函数内部的静态局部变量）也存放在全局数据区。全局数据区的数据并不会因为函数的退出而释放空间。
-
-:small_blue_diamond: **初始化：**
-
-+ 全局static变量的初始化在编译的时候进行。在main函数被调用之前初始化并且只初始化一次 。
-+ 默认初始化为0，包括未初始化的全局静态变量与局部静态变量，都存在 **全局未初始化区**
-
-:small_blue_diamond: **作用域：**
-
-+ 静态变量在函数内定义，始终存在，且只进行一次初始化，具有记忆性，其作用范围与局部变量相同，函数退出后仍然存在，但不能使用
-
-  ```c++
-  int main(void)
-  {    
-      for(int i = 0;i < 5;i++)
-      {
-        	static int m = 7;
-       	 	cout<< "m=" << m--;
-      } 
-      cout << m << endl;//这里会显示错误
-          return 0;
-  ```
-
-+ 普通全局变量作用域是整个源程序，当一个程序有多个源文件组成时候，普通全局变量在每个源文件中都是有效的，而 **静态全局变量则限制了作用域，只在定义该变量的源文件中有效。在同一个源程序中的其他源文件不能使用。** 由于静态全局变量的作用域限于一个源文件内，只能为该源文件内的函数公用， 因此可以避免在其它源文件中引起错误。
-
-
-:diamonds:  **考虑类的情况**
+##### 7.C++中static的作用
 
 :small_blue_diamond:  **static成员变量** 
 
-```c++
-#include<iostream>
-using namespace std;
- 
-class Myclass
-{
-private:
-    int a , b , c;
-    static int sum;  //声明静态数据成员
-public:
-    Myclass(int a , int b , int c) : a(a), b(b), c(c){
-        sum += a+b+c;
-    }
-    void GetSum();
-};
- 
-int Myclass::sum = 0;   //定义并初始化静态数据成员
-
-void Myclass::GetSum() {
-		cout<<"sum="<<sum<<endl;
-}
-
-int main(void)
-{
-    Myclass M(1 , 2 , 3);
-    M.GetSum();						//6
-    Myclass N(4 , 5 , 6);
-    N.GetSum();						//21
-    M.GetSum();						//21
-    return 0;
-}
-```
-
-+ 对于非静态数据成员，每个类对象都有自己的拷贝。而静态数据成员被当作是类的成员。无论这个类的对象被定义了多少个，静态数据成员在程序中也只有一份拷贝，由该类型的所有对象共享访问。也就是说，静态数据成员是该类的所有对象所共有的。对该类的多个对象来说，静态数据成员只分配一次内存(定义时就分配)，供所有对象共用。所以，静态数据成员的值对每个对象都是一样的，它的值可以更新；
-+ 静态数据成员存储在全局数据区。静态数据成员定义时要分配空间，所以不能在类声明中定义。在Example中，语句`int Myclass::Sum=0;`是定义静态数据成员；
-+ 因为静态数据成员在全局数据区分配内存，属于本类的所有对象共享，所以，它不属于特定的类对象，在没有产生类对象时其作用域就可见，即在没有产生类的实例时，我们就可以操作它；
++ 静态数据成员在程序中也只有一份拷贝，由该类型的所有对象共享访问。即只要分配一次内存(定义时就分配)，供所有对象共用。所以，静态数据成员的值对每个对象都是一样的，它的值可以更新；
++ 静态数据成员存储在全局数据区。静态数据成员定义时要分配空间，所以不能在类声明中定义。
 + 同全局变量相比，使用静态数据成员有两个优势：
   + 静态数据成员没有进入程序的全局名字空间，因此不存在与程序中其它全局名字冲突的可能性；
   + 可以实现信息隐藏。静态数据成员可以是private成员，而全局变量不能；
 
 :small_blue_diamond:  **static成员函数**
 
-```c
-#include<iostream>
-using namespace std;
- 
-class Myclass
-{
-private:
-	int a , b , c;
-	static int sum;  //声明静态数据成员
-public:
-	Myclass(int a , int b , int c) : a(a), b(b), c(c) {
-		this->a = a;
-		this->b = b;
-		this->c = c;
-		sum += a+b+c;    //非静态成员函数可以访问静态数据成员
-	}
-	static void GetSum();  //声明静态成员函数
-};
- 
-int Myclass::sum = 0;   //定义并初始化静态数据成员
++ 静态数据成员为类的全部服务而不是为某一个类的具体对象服务。
++ 与普通函数相比，静态成员函数由于不与任何的对象相联系，因此它不具有this指针。它无法访问非静态数据成员与非静态成员函数，它只能调用其余的静态成员函数。非静态成员函数可以任意地访问静态成员函数和静态数据成员。
 
-void Myclass::GetSum(){    //静态成员函数的实现
-
-	//cout<<a<<endl;    //错误代码，a是非静态数据成员
-	cout<<"sum="<<sum<<endl;
-}
- 
-int main(void)
-{
-	Myclass M(1 , 2 , 3);
-	M.GetSum();							//6
-	Myclass N(4 , 5 , 6);
-	N.GetSum();							//21
-	Myclass::GetSum();			//21
-	return 0;
-}
-```
-
-+ 与静态数据成员一样，我们也可以创建一个静态成员函数，它为类的全部服务而不是为某一个类的具体对象服务。静态成员函数与静态数据成员一样，都是类的内部实现，属于类定义的一部分。
-+ 普通的成员函数一般都隐含了一个this指针，this指针指向类的对象本身，因为普通成员函数总是具体的属于某个类的具体对象的。通常情况下，this是缺省的。如函数fn()实际上是this->fn()。 **但是与普通函数相比，静态成员函数由于不是与任何的对象相联系，因此它不具有this指针。从这个意义上讲，它无法访问属于类对象的非静态数据成员，也无法访问非静态成员函数，它只能调用其余的静态成员函数。**
-
-+ 出现在类体外的函数定义不能指定关键字static；
-+ 静态成员之间可以相互访问，包括静态成员函数访问静态数据成员和访问静态成员函数；
-+ 非静态成员函数可以任意地访问静态成员函数和静态数据成员；
-+ 静态成员函数不能访问非静态成员函数和非静态数据成员；
 + 由于没有this指针的额外开销，因此静态成员函数与类的全局函数相比速度上会有少许的增长；
-+ 调用静态成员函数，可以用成员访问操作符(.)和(->)为一个类的对象或指向类对象的指针调用静态成员函数，也可以直接使用如下格式：
-  `＜类名＞::＜静态成员函数名＞（＜参数表＞）`
-  调用类的静态成员函数。
++ 调用静态成员函数，可以用成员访问操作符(.)和(->)为一个类的对象或指向类对象的指针调用静态成员函数，也可以直接使用如下格式：`＜类名＞::＜静态成员函数名＞（＜参数表＞）`调用类的静态成员函数。
 
-#### **const**
-
-:diamonds:   **不考虑类的情况**
-
-- const常量在定义时必须初始化，之后无法更改
-
-- const形参可以接收const和非const类型的实参，例如
-
-  ```c++
-  // i 可以是 int 型或者 const int 型
-  void fun(const int& i){
-      //...
-  }
-  ```
-
-:diamonds:   **不考虑类的情况**
+##### 8.C++中const的作用
 
 :small_blue_diamond:  **const成员变量**
 
-- 不能在类定义外部初始化，只能通过构造函数初始化列表进行初始化
-- 并且必须有构造函数；
+- 必须有构造函数；不能在类定义外部初始化，只能通过构造函数初始化列表进行初始化
 - 不同类对其const数据成员的值可以不同，所以不能在类中声明时初始化
 
 :small_blue_diamond: **const成员函数**
@@ -362,16 +209,12 @@ int main(void)
 
 ---
 
-### 8.C++的顶层const和底层const
-
-#### **概念区分**
+##### 9.C++的顶层const和底层const
 
 >  **指针本身是不是一个常量** 以及 **指针所指的是不是一个常量** 是两个独立的问题。
 
 - **顶层**const：指的是 **指针本身是一个常量**
 - **底层**const：指的是 **指针所指的对象是一个常量**
-
-#### **举个例子**
 
 ```c++
 int i= 0；
@@ -382,29 +225,14 @@ const int *const p3 = p2;		//靠右的const是顶层const，靠左的const是底
 const int &r = ci;					//用于声明引用的const都是底层const
 ```
 
-#### **区分作用**
-
-- 执行对象拷贝时有限制，常量的底层const不能赋值给非常量的底层const
-- 使用命名的强制类型转换函数const_cast时，只能改变运算对象的底层const
-
-```c++
-const int a;
-int const a;
-const int *a;
-int *const a;
-```
-
-- `int const a`和`const int a`均表示定义常量类型a。
-- `const int *a`，其中a为指向int型变量的指针，const在 * 左侧，表示a指向不可变常量。(看成`const (*a)`，对引用加const)
+- `const int *a`，a为指向int型变量的指针，const在 * 左侧，表示a指向不可变常量。
 - `int *const a`，依旧是指针类型，表示a为指向整型数据的常指针。(看成`const(a)`，对指针const)
 
 ---
 
-### 9.constexpr与常量表达式
+##### 10.constexpr与常量表达式
 
-#### (1).常量表达式
-
-**常量表达式** 是指 **值不会改变** 并且在 **编译过程就能得到计算结果** 的表达式。一个对象（或表达式）是不是常量表达式由它的数据类型和初始值共同决定。
++ **常量表达式** 是指 **值不会改变** 并且在 **编译过程就能得到计算结果** 的表达式。一个对象（或表达式）是不是常量表达式由它的数据类型和初始值共同决定。
 
 ```c++
 const int max_files = 20;			// 是常量表达式
@@ -414,260 +242,70 @@ int staff_size = 2;					// 不是常量表达式
 const int sz = get_size();			// 不是常量表达式
 ```
 
-#### (2).constexpr变量
-
-+ C++允许将 **变量声明为constexpr类型以便由编译器来验证变量的值是否是一个常量表达式**
-+ **声明为constexpr的变量一定是一个常量，而且必须用常量表达式初始化**
-  + 尽管不能使用普通函数作为constexpr变量的初始值，但是 **新标准允许定义一种特殊的 constexpr 函数** 。这种函数应该足够简单以使得编译时就可以计算其结果，这样就能用constexpr函数去初始化constexpr变量了
-
-#### (3).constexpr与指针
-
-+ 一个`constexpr`指针的初始值必须是`nullptr`或者`0`,或者是存储于某个固定地址中的对象；
-+ `constexpr`引用必须绑定在存储于某个固定地址中的对象
-
-> - 例如，函数体内定义的变量一般来说并非存放在固定地址中， 因此`constexpr`指针不能指向这样的变量。
-> - 相反，**全局变量 以及 局部静态变量地址固定不变，能用来初始化`constexpr`指针**
-
-在constexpr声明中如果定义了一个指针， **限定符constexpr仅对指针有效，与指针所指的对象无关。**
-
-```c++
-const int *p = nullptr;
-constexpr int *q = nullptr;
-```
-
-+ p是一个指向常量的指针
-
-+ q是一个常量指针。
-
-  > constexpr把它所定义的对象置为了顶层const
++ C++允许将 **变量声明为constexpr类型以便由编译器来验证变量的值是否是一个常量表达式** 。声明为constexpr的变量一定是一个常量，而且必须用常量表达式初始化
 
 ---
 
-### 10.auto、decltype和decltype(auto)的用法
+##### 11.auto、decltype和decltype(auto)的用法
 
-**（1）auto**
++ C++11新标准引入了auto类型让编译器去分析表达式所属的类型。所以说 auto 定义的变量必须有初始值。举个例子：
 
-C++11新标准引入了auto类型说明符，用它就能让编译器替我们去分析表达式所属的类型。和原来那些只对应某种特定的类型说明符(例如 int)不同，
-
-auto 让编译器通过初始值来进行类型推演。从而获得定义变量的类型，所以说 auto 定义的变量必须有初始值。举个例子：
-
-```c++
- //普通；类型
- int a = 1, b = 3;
- auto c = a + b;// c为int型
- 
- //const类型
- const int i = 5;
- auto j = i; // 变量i是顶层const, 会被忽略, 所以j的类型是int
- auto k = &i; // 变量i是一个常量, 对常量取地址是一种底层const, 所以b的类型是const int*
- const auto l = i; //如果希望推断出的类型是顶层const的, 那么就需要在auto前面加上cosnt
- 
- //引用和指针类型
- int x = 2;
- int& y = x;
- auto z = y; //z是int型不是int& 型
- auto& p1 = y; //p1是int&型
- auto p2 = &x; //p2是指针类型int*
-```
-
-**（2）decltype**
-
-有的时候我们还会遇到这种情况， **希望从表达式中推断出要定义变量的类型，但却不想用表达式的值去初始化变量。还有可能是函数的返回类型为某表达式的值类型。** 在这些时候auto显得就无力了，所以C++11又引入了第二种类型说明符decltype，它的作用是选择并返回操作数的数据类型。在此过程中，编译器只是分析表达式并得到它的类型，却不进行实际的计算表达式的值。
++ decltype作用是选择并返回操作数的数据类型。编译器只分析表达式并得到它的类型，不进行实际的计算表达式的值
 
 ```c++
  int func() {return 0};
- 
+
  //普通类型
  decltype(func()) sum = 5; // sum的类型是函数func()的返回值的类型int, 但是这时不会实际调用函数func()
  int a = 0;
  decltype(a) b = 4; // a的类型是int, 所以b的类型也是int
- 
- //不论是顶层const还是底层const, decltype都会保留   
- const int c = 3;
- decltype(c) d = c; // d的类型和c是一样的, 都是顶层const
- int e = 4;
- const int* f = &e; // f是底层const
- decltype(f) g = f; // g也是底层const
- 
  //引用与指针类型
  //1. 如果表达式是引用类型, 那么decltype的类型也是引用
  const int i = 3, &j = i;
  decltype(j) k = 5; // k的类型是 const int&
- 
  //2. 如果表达式是引用类型, 但是想要得到这个引用所指向的类型, 需要修改表达式:
  int i = 3, &r = i;
  decltype(r + 0) t = 5; // 此时是int类型
- 
  //3. 对指针的解引用操作返回的是引用类型
  int i = 3, j = 6, *p = &i;
  decltype(*p) c = j; // c是int&类型, c和j绑定在一起
- 
  //4. 如果一个表达式的类型不是引用, 但是我们需要推断出引用, 那么可以加上一对括号, 就变成了引用类型了
  int i = 3;
  decltype((i)) j = i; // 此时j的类型是int&类型, j和i绑定在了一起
 ```
 
-**（3）decltype(auto)**
+##### 12.define宏定义和const的区别
 
-decltype(auto)是C++14新增的类型指示符，可以用来声明变量以及指示函数返回类型。在使用时，会将“=”号左边的表达式替换掉auto，再根据decltype的语法规则来确定类型。举个例子：
-
-```c++
- int e = 4;
- const int* f = &e; // f是底层const
- decltype(auto) j = f;//j的类型是const int* 并且指向的是e
-```
-
-> 《auto和decltype的用法总结》：https://www.cnblogs.com/XiangfeiAi/p/4451904.html
->
-> 《C++11新特性中auto 和 decltype 区别和联系》：https://www.jb51.net/article/103666.htm
-
-### 11.define宏定义和const的区别
-
-#### **编译阶段**
-
-- define是在编译的**预处理**阶段起作用，而const是在编译、运行的时候起作用
-
-#### **安全性**
-
-- define只做替换，不做类型检查和计算，也不求解，容易产生错误，一般最好加上一个大括号包含住全部的内容，要不然很容易出错
-- const常量有数据类型，编译器可以对其进行类型安全检查
-
-#### **内存占用**
-
-- define只是将宏名称进行替换，在内存中会产生多分相同的备份。const在程序运行中只有一份备份，且可以执行常量折叠，能将复杂的的表达式计算出结果放入常量表
-- 宏替换发生在编译阶段之前，属于文本插入替换；const作用发生于编译过程中。
-- 宏不检查类型；const会检查数据类型。
-- 宏定义的数据没有分配内存空间，只是插入替换掉；const定义的变量只是值不能改变，但要分配内存空间。\
+- define是在编译的**预处理**阶段起作用，只做替换，不做类型检查和计算，也不求解，容易产生错误；宏定义的数据没有分配内存空间，只是插入替换掉
+- const是在编译、运行的时候起作用；const常量有数据类型，编译器可以对其进行类型安全检查；const定义的变量只是值不能改变，但要分配内存空间。
 
 ---
 
-### 12.从汇编层面解释引用
+##### 13.C++的四种强制转换类型
 
-```scss
- 9:     		int x = 1;
-00401048  	mov     dword ptr [ebp-4],1
-10:    			int &b = x;
-0040104F 	  lea     eax,[ebp-4]
-00401052 		mov     dword ptr [ebp-8],eax
-```
+**reinterpret_cast** ：`reinpreter_cast (expression)`
 
-x的地址为ebp-4，b的地址为ebp-8，因为栈内的变量内存是从高往低进行分配的，所以b的地址比x的低。
++ 
 
-`lea eax,[ebp-4]` 这条语句将x的地址ebp-4放入eax寄存器 
+**const_cast** ：`const_cast<type-id>( expression )` 
 
-`mov dword ptr [ebp-8],eax` 这条语句将eax的值放入b的地址
++ 修改类型的const或volatile属性。可以使一个不是const类型的数据转换成const类型的
+  + 常量指针被转化成非常量的指针
+  + 常量引用被转换成非常量的引用
+  + const_cast一般用于修改指针。如const char *p形式。
 
-`ebp-8` 中上面两条汇编的作用即:将x的地址存入变量b中，这不和将某个变量的地址存入指针变量是一样的吗?所以从汇编层次来看，的确引用是通过指针来实现的。
+**static_cast** ：`static_cast < type-id > ( expression )`
 
----
++ 该运算符把expression转换为type-id类型，但没有运行时类型检查来保证转换的安全性。
+  + void指针->其他类型指针
+  + 改变通常的标准转换
+  + 避免出现可能多种转换的歧义
 
-### 13.C++的四种强制转换类型
+**dynamic_cast**：`dynamic_cast < type-id > ( expression )`
 
-#### **reinterpret_cast**
++ 该运算符把expression转换成type-id类型的对象。Type-id必须是类的指针、类的引用或者void *；如果type-id是类指针类型，那么expression也必须是一个指针，如果type-id是一个引用，那么expression也必须是一个引用
 
-`reinterpret_cast<type-id>` (expression) type-id 必须是一个指针、引用、算术类型、函数指针或者成员指针。它可以用于类型之间进行强制转换。
 
-#### **const_cast**
-
-`const_cast<type_id> (expression)` 该运算符用来修改类型的const或volatile属性。除了const 或volatile修饰之外， type_id和expression的类型是一样的。
-
-用法如下:
-
-+ 常量指针被转化成非常量的指针，并且仍然指向原来的对象 
-+ 常量引用被转换成非常量的引用，并且仍然指向原来的对象 
-+ const_cast一般用于修改底指针。如const char *p形式
-
-#### **static_cast**
-
-`static_cast < type-id >` (expression) 该运算符把expression转换为type-id类型，但没有运行时类型检查来保证转换的安全性。它主要有如下几种用法:
-
-+ 用于类层次结构中基类(父类)和派生类(子类)之间指针或引用引用的转换
-  + 进行上行转换(把派生类的指针或引用转换成基类表示)是安全的 
-  + 进行下行转换(把基类指针或引用转换成派生类表示)时，由于没有动态类型检查，所以是不安 全的
-
-+ 用于基本数据类型之间的转换，如把int转换成char，把int转换成enum。这种转换的安全性也要开发人 员来保证。
-
-+ 把空指针转换成目标类型的空指
-+ 针 把任何类型的表达式转换成void类型
-
->  注意:static_cast不能转换掉expression的const、volatile、或者__unaligned属性。
-
-#### **dynamic_cast**
-
-有类型检查，基类向派生类转换比较安全，但是派生类向基类转换则不太安全
-
-`dynamic_cast (expression)`
-
-该运算符把expression转换成type-id类型的对象。type-id 必须是类的指针、类的引用或者void*
-
-如果 type-id 是类指针类型，那么expression也必须是一个指针，如果 type-id 是一个引用，那么 expression 也必须是一个引用
-
-dynamic_cast运算符可以在执行期决定真正的类型，也就是说expression必须是多态类型。如果下行转换是安全的(也就说，如果基类指针或者引用确实指向一个派生类对象)这个运算符会传回适当转型过的 指针。如果 如果下行转换不安全，这个运算符会传回空指针(也就是说，基类指针或者引用没有指向一 个派生类对象)
-
-dynamic_cast主要用于类层次间的上行转换和下行转换，还可以用于类之间的交叉转换 
-
-在类层次间进行上行转换时，dynamic_cast和static_cast的效果是一样的 
-
-在进行下行转换时，dynamic_cast具有类型检查的功能，比static_cast更安全
-
-```c++
-#include <bits/stdc++.h>
-using namespace std;
-class Base
-{
-public:
-    Base() :b(1) {}
-    virtual void fun() {};
-  	int b;
-};
-class Son : public Base{
-public:
-    Son() :d(2) {}
-		int d; 
-};
-int main() {
-    int n = 97;
-    //reinterpret_cast
-    int *p = &n;
-    //以下两者效果相同
-    char *c = reinterpret_cast<char*> (p);
-    char *c2 = (char*)(p);
-    cout << "reinterpret_cast输出:"<< *c2 << endl; //const_cast
-    const int *p2 = &n;
-    int *p3 = const_cast<int*>(p2);
-    *p3 = 100;
-    cout << "const_cast输出:" << *p3 << endl;
-  
-    Base* b1 = new Son;
-    Base* b2 = new Base;
-  
-    //static_cast
-    Son* s1 = static_cast<Son*>(b1); //同类型转换
-    Son* s2 = static_cast<Son*>(b2); //下行转换，不安全
-    cout << "static_cast输出:"<< endl;
-    cout << s1->d << endl;
-    cout << s2->d << endl; //下行转换，原先父对象没有d成员，输出垃圾值
-    
-  	//dynamic_cast
-    Son* s3 = dynamic_cast<Son*>(b1); //同类型转换 
-  	Son* s4 = dynamic_cast<Son*>(b2); //下行转换，安全 
-  	cout << "dynamic_cast输出:" << endl;
-    cout << s3->d << endl;
-    if(s4 == nullptr)
-    		cout << "s4指针为nullptr" << endl; 
-  	else
-    		cout << s4->d << endl;
-    return 0;
-}
-//输出结果 
-//reinterpret_cast输出:a 
-//const_cast输出:100 
-//static_cast输出:
-//2
-//-33686019 //dynamic_cast输出:
-//2
-//s4指针为nullptr  
-```
 
 
 
@@ -718,15 +356,10 @@ int main() {
 
 ---
 
-### 2. C中结构体内存对齐问题？
-
-#### 对齐问题
-
-当定义结构体为：
+##### 2. C中结构体内存对齐问题？
 
 ```c++
-struct number_2
-{
+struct number_2{
     char a;
     int b;
     double c;
@@ -735,35 +368,10 @@ struct number_2
 
 > st2所占内存并非1+4+8=13个，而是16个>13个。
 
-结构体中包含有相同类型或不同类型的数据类型，如char（1字节），int（4字节），double（8字节），所以结构体内存出现了一个对齐原则：
-
-**结构体变量中元素是按照定义顺序一个一个放到内存中去的，但并不是紧密排列的。从结构体存储的首地址开始，每一个元素放置到内存中时，它都会认为内存是以它自己的大小来划分的，因此元素放置的位置一定会在自己宽度的整数倍上开始（以结构体变量首地址为0计算）。**
-
-即，当char a时，以char自身大小（一字节）划分，a占有了首地址0一个字节。但是当int b时，以int自身大小（四字节）划分，所以b从四字节的非负整数倍开始存储占用四个字节，由于首地址0已被占用，所以b从第四个地址开始占用四个字节。同理，当double c时，double也以自身大小（八字节）划分内存，而前八个（0——7）已被占用，故c从第八个地址开始占用八个字节。如下左图：
-
-> 如果去掉中间定义的int b，st2仍然占16个字节。因为，double c时，首地址0已被占用，c不能从0（8的0倍）开始，就只能从8（8的1倍）开始。如下右图：
-
-<div align="center">
-    <img src="../图片/C:C++1.png"width="400px" />
-</div>
-
-
-
-而且，double b之前空着的内存，在对齐下原则可以随意增加变量，内存是不会增加的。如下图：
-
-<div align="center">
-    <img src="../图片/C:C++2.png"
-        	width="200px",hight="400px">
-</div>
-
-
-#### 补齐原则
-
-当定义结构体为：
+对齐原则： **结构体变量中元素是按照定义顺序一个一个放到内存中去的，但并不是紧密排列的。从结构体存储的首地址开始，每一个元素放置到内存中时，它都会认为内存是以它自己的大小来划分的，因此元素放置的位置一定会在自己宽度的整数倍上开始（以结构体变量首地址为0计算）。**
 
 ```c++
-struct number_4
-{
+struct number_4{
     char a;
     int b;
     char c;
@@ -772,22 +380,12 @@ struct number_4
 
 > sizeof(st4)=12,而不是4+4+1=9。
 
-这时候就牵扯到一个补齐原则：
-
-**在经过对齐原则分析后，检查计算出的存储单元是否为所有元素中所占内存最大的元素的长度的整数倍，是，则结束；若不是，则补齐为它的整数倍。**
-
-即，当4+4+1=9不是结构体中内存最大元素b的整数倍时，要补齐成其整数倍12。如下图左所示，如果将int换成double，sizeof(st4)=24为最大元素double的整数倍了。如下图右所示：
-
-<div align="center">
-    <img src="../图片/C:C++3.png"
-        	width="400px">
-</div>
-
+补齐原则： **在经过对齐原则分析后，检查计算出的存储单元是否为所有元素中所占内存最大的元素的长度的整数倍，是，则结束；若不是，则补齐为它的整数倍。**
 
 
 ---
 
-### 3.C++类的对象存储空间？
+##### 3.C++类的对象存储空间？
 
 对于类实例化一个对象，我们要计算这个对象所占的存储空间大小，其存储空间大小计算为（权威解答）：
 
@@ -796,8 +394,6 @@ struct number_4
 + 加上 **支持虚函数所产生的负担的总和。**
 
 以上三种的加和即为当前对象的占有的存储空间的大小。
-
-#### 代码实验
 
 ```c++
 class Test {
@@ -932,7 +528,7 @@ int main() {
 
 ---
 
-### 4.C++有哪几种的构造函数
+##### 4.C++有哪几种的构造函数
 
 C++中的构造函数可以分为4类：
 
@@ -997,11 +593,9 @@ int main(){
 - 复制构造函数用于复制本类的对象
 - 转换构造函数用于将其他类型的变量，隐式转换为本类对象
 
-> 《浅谈C++中的几种构造函数》：https://blog.csdn.net/zxc024000/article/details/51153743
-
 ---
 
-### 5.有关友元
+##### 5.有关友元
 
 - 类通过增加friend关键字在函数开头进行声明来将其作为友元，这样就允许函数访问自己的非公有成员。
 - 友元声明只能在类的内部，但是 **声明友元之外必须再专门对函数进行一次声明。**
@@ -1030,38 +624,26 @@ Sales_data add (const Sales_data&, const Sales_data&);
 
 ---
 
-###  6.using 与 typedef
+#####  6.using 与 typedef
 
 > 在用来定义类型的成员必须先定义后使用，这一点和普通成员变量有所区别。
 
-#### typedef 
+**typedef**  ：别名命名方式： `typedef std::string::size_type pos`
 
-别名命名方式： `typedef std::string::size_type pos`
-
-#### using
-
-别名命名方式： `using pos = std::string::size_type`
+**using** ：别名命名方式： `using pos = std::string::size_type`
 
 ---
 
-### 7.类的静态成员
+##### 7.类的静态成员
 
-- 类的`静态成员`只与类本身相关，与其任何对象都无关。
-
-  + 形式是在成员声明前加`static`关键字
-  + 可以是public或private，类型可是常量、引用、指针、类类型等
-  + 类的静态成员存在于任何对象之外，任何对象中都不包含与之相关的数据
-  + 静态成员不与任何对象绑定，故不存在`this指针`。因此既不能在函数体内使用this指针，也不能被声明为const成员函数。
+- 类的`静态成员`只与类本身相关，与其任何对象都无关。静态成员不与任何对象绑定，不存在`this指针`。也不能被声明为const成员函数
 
 - 静态成员的定义：
 
   + `静态成员函数`可在类内或类外定义，在类外定义时不可重复static关键字，`static只出现在声明中`。
-  + `静态数据成员`并非在创建类时被定义，因此`静态数据成员不由构造函数初始化`。
-  + 不能在类内部初始化`静态数据成员`，`静态数据成员必须在类外定义和初始化`，一个静态数据成员只能被定义一次
-  + 静态数据成员定义在任何函数之外，一旦被定义就存在于程序整个生命周期。
-  + 为确保静态数据成员只被定义一次，最好将其定义与其他非内联函数的定义放在同一头文件
+  + `静态数据成员`并非在创建类时被定义，因此`静态数据成员不由构造函数初始化`。不能在类内部初始化`静态数据成员`，`静态数据成员必须在类外定义和初始化`，一个静态数据成员只能被定义一次
   + `静态成员函数可在类内和类外定义，静态数据成员只能在类外定义和初始化`
-
+  
 - 静态成员的访问方式：
 
   + 可用类的`作用域运算符`直接访问静态成员，也可用类的对象、引用、指针来访问静态成员
@@ -1096,24 +678,10 @@ Sales_data add (const Sales_data&, const Sales_data&);
   r=ac2->rate();      //通过类指针访问
   ```
 
-- 通常，类的静态数据成员不应在类内初始化。特例是，可为静态数据成员提供`const整型`的`类内初始值`，且该静态数据成员必须是`constexpr类型`，初值必须是常量表达式。它们可用到任何需要常量表达式的地方
-
-- 例子：类内初始化的静态数据成员必须是字面值常量类型的constexpr
-
-  ```c++
-  class Account{
-  public:
-      static double rate(){return interestRate;}
-      static void rate(double);
-  private:
-      static constexpr int period=30; //常量表达式
-      double daily_tbl[period];       //可用于需要常量表达式的地方
-  };
-  ```
 
 ---
 
-##### C++中struct和class的区别
+##### 8. C++中struct和class的区别
 
 + 相同点
   + 两者都拥有成员函数、公有和私有部分
@@ -1126,7 +694,7 @@ Sales_data add (const Sales_data&, const Sales_data&);
 
 ---
 
-##### C++和C的struct区别
+##### 9. C++和C的struct区别
 
 - C语言中：struct是用户自定义数据类型（UDT），是结构体；C++中struct是抽象数据类型（ADT），是类
 - C中struct是没有权限的设置的，且struct中只能是一些变量的集合体，可以封装数据却不可以隐藏数据，而且成员不可以是函数
@@ -1134,7 +702,7 @@ Sales_data add (const Sales_data&, const Sales_data&);
 
 ---
 
-##### public，protected和private访问和继承权限/public/protected/private的区别？
+##### 10. public，protected和private访问和继承权限/public/protected/private的区别？
 
 + 访问权限：
   + public的变量和函数在类的内部外部都可以访问。
@@ -1152,61 +720,29 @@ Sales_data add (const Sales_data&, const Sales_data&);
 
 ---
 
-### 10.volatile、mutable和explicit关键字的用法
+##### 11.volatile、mutable和explicit关键字的用法
 
-#### （1）**volatile**
++ volatile 关键字是一种类型修饰符，在c/c++中的作用：
+  + 告诉编译器不要将定义的变量优化掉。
+  + 告诉编译器总是从缓存取被修饰的变量值，而不是寄存器取值。
 
-volatile 关键字是一种类型修饰符，用它声明的类型变量表示可以被某些编译器未知的因素更改，比如：操作系统、硬件或者其它线程等。遇到这个关键字声明的变量，编译器对访问该变量的代码就不再进行优化，从而可以提供对特殊地址的稳定访问。
++  **多线程下的volatile** 
+  + 当两个线程都用一个要改变值的变量时，用volatile声明，防止优化编译器把变量从内存装入CPU寄存器。如果变量被装入寄存器，两个线程有可能一个使用内存中的变量，一个使用寄存器中的变量，这会造成程序的错误执行。
+  + volatile的意思是让编译器每次操作该变量时一定要从内存中真正取出，而不是使用已经存在寄存器中的值。
 
-当要求使用 volatile 声明的变量的值的时候，系统总是重新从它所在的内存读取数据，即使它前面的指令刚刚从该处读取过数据。
++ 被mutable修饰的变量，将永远处于可变的状态。需要在const函数里面修改一些跟类状态无关的数据成员，那么这个函数就应该被mutable来修饰，并且放在函数后后面关键字位置。
 
-volatile定义变量的值是易变的，每次用到这个变量的值的时候都要去重新读取这个变量的值，而不是读寄存器内的备份。多线程中被几个任务共享的变量需要定义为volatile类型。
-
-**volatile 指针**
-
-volatile 指针和 const 修饰词类似，const 有常量指针和指针常量的说法，volatile 也有相应的概念
-
-修饰由指针指向的对象、数据是 const 或 volatile 的：
-
-```c++
-const char* cpch;
-volatile char* vpch;
-```
-
-指针自身的值——一个代表地址的整数变量，是 const 或 volatile 的：
-
-```c++
-char* const pchc;
-char* volatile pchv;
-```
-
-注意：
-
-- 可以把一个非volatile int赋给volatile int，但是不能把非volatile对象赋给一个volatile对象。
-- 除了基本类型外，对用户定义类型也可以用volatile类型进行修饰。
-- C++中一个有volatile标识符的类只能访问它接口的子集，一个由类的实现者控制的子集。用户只能用const_cast来获得对类型接口的完全访问。此外，volatile向const一样会从类传递到它的成员。
-
-**多线程下的volatile** 
-
-有些变量是用volatile关键字声明的。当两个线程都要用到某一个变量且该变量的值会被改变时，应该用volatile声明，该关键字的作用是防止优化编译器把变量从内存装入CPU寄存器中。如果变量被装入寄存器，那么两个线程有可能一个使用内存中的变量，一个使用寄存器中的变量，这会造成程序的错误执行。volatile的意思是让编译器每次操作该变量时一定要从内存中真正取出，而不是使用已经存在寄存器中的值。
-
-#### （2）**mutable**
-
-mutable的中文意思是“可变的，易变的”，跟constant（既C++中的const）是反义词。在C++中，mutable也是为了突破const的限制而设置的。被mutable修饰的变量，将永远处于可变的状态，即使在一个const函数中。我们知道，如果类的成员函数不会改变对象的状态，那么这个成员函数一般会声明成const的。但是，有些时候，我们需要在const函数里面修改一些跟类状态无关的数据成员，那么这个函数就应该被mutable来修饰，并且放在函数后后面关键字位置。
-
-#### （3）**explicit**
-
-explicit关键字用来修饰类的构造函数，被修饰的构造函数的类，不能发生相应的隐式类型转换，只能以显示的方式进行类型转换，注意以下几点：
-
-- explicit 关键字只能用于类内部的构造函数声明上
-- explicit 关键字作用于单个参数的构造函数
-- 被explicit修饰的构造函数的类，不能发生相应的隐式类型转换
++ explicit关键字用来修饰类的构造函数，被修饰的构造函数的类，不能发生相应的隐式类型转换，只能以显示的方式进行类型转换。explicit 关键字作用于单个参数的构造函数。
 
 ---
 
-### 11.C++中类的数据成员和成员函数内存分布
+##### 12.C++中类的数据成员和成员函数内存分布
 
-类分为成员变量和成员函数，我们先来讨论成员变量。一个类对象的地址就是类所包含的这一片内存空间的首地址，这个首地址也就对应具体某一个成员变量 的地址。(在定义类对象的同时这些成员变量也就被定义了)，举个例子:
+类分为成员变量和成员函数：
+
++ 类对象的地址就是类所包含的这一片内存空间的首地址，这个首地址也就对应具体某一个成员变量的地址。(在定义类对象的同时这些成员变量也就被定义了)
++ 成员函数不占用对象的内存。因为函数都是存放在代码区，包括静态成员函数。静态成员函数与一般成员函数的唯一区别就是没有this指针 ，因此不能访问非静态数据成员。
+
 
 ```c++
 #include <iostream>
@@ -1236,22 +772,13 @@ int main() {
 //age大小:4
 ```
 
-从代码运行结果来看，对象的大小和对象中数据成员的大小是一致的，也就是说，成员函数不占用对象的内存。这是因为所有的函数都是存放在代码区的，不管是全局函数，还是成员函数。
-
-要是成员函数占用类的对象空间，那么将是多么可怕的事情: 定义一次类对象就有成员函数占用一段空间。
-
-我们再来补充一下静态成员函数的存放问题: **静态成员函数与一般成员函数的唯一区别就是没有this指针** ，因此不能访问非静态数据成员。
-
-就像我前面提到的， **所有函数都存放在代码区，静态函数也不例外。所有有人一看到 static 这个单词就 主观的认为是存放在全局数据区，那是不对的。**
-
 ---
 
-### 12.类对象的大小受哪些因素影响
+##### 13.类对象的大小受哪些因素影响
 
 + 类的非静态成员变量大小，静态成员不占据类的空间，成员函数也不占据类的空间大小; 
-+ 内存对齐另外分配的空间大小，类内的数据也是需要进行内存对齐操作的;
 + 虚函数的话，会在类对象插入vptr指针，加上指针大小;
-+ 当该该类是某类的派生类，那么派生类继承的基类部分的数据成员也会存在在派生类中的空间中， 也会对派生类进行扩展。
++ 当该该类是某类的派生类，继承的基类部分的数据成员也会存在在派生类中的空间中
 
 ```c++
 class A {};
@@ -1261,9 +788,9 @@ int main(){
 }
 ```
 
-空类的大小是1， 在C++中空类会占一个字节，这是为了让对象的实例能够相互区别。具体来说，空类同样可以被实例化，并且每个实例在内存中都有独一无二的地址，因此，编译器会给空类隐含加上一个字节，这样空类实例化之后就会拥有独一无二的内存地址。当该空白类作为基类时，该类的大小就优化为0了，子类的大小就是子类本身的大小。这就是所谓的空白基类最优化。
+空类的大小是1， 在C++中空类会占一个字节，这是为了让对象的实例能够相互区别。
 
-空类的实例大小就是类的大小，所以sizeof(a)=1字节,如果a是指针，则sizeof(a)就是指针的大小，即4字节。
+当该空白类作为基类时，该类的大小就优化为0了，子类的大小就是子类本身的大小。这就是所谓的空白基类最优化。
 
 ```c++
 class A { 
@@ -1280,122 +807,79 @@ int main(){
 ```c++
 class A { static int a; };
 int main(){
-		cout<<sizeof(A)<<endl;// 输出 1; A a;
-		cout<<sizeof(a)<<endl;// 输出 1; return 0;
+		cout<<sizeof(A)<<endl;// 输出 1; 
+  	A a;
+		cout<<sizeof(a)<<endl;// 输出 1; 
+  	return 0;
 }
 ```
-
-静态成员存放在静态存储区，不占用类的大小, 普通函数也不占用类大小
 
 ```C++
 class A { int a; };
 int main(){
-    cout<<sizeof(A)<<endl;// 输出 4; A a;
-    cout<<sizeof(a)<<endl;// 输出 4; return 0;
+    cout<<sizeof(A)<<endl;// 输出 4; 
+  	A a;
+    cout<<sizeof(a)<<endl;// 输出 4; 
+  	return 0;
 }
 ```
 
 ```c++
 class A { static int a; int b; };;
 int main(){
-    cout<<sizeof(A)<<endl;// 输出 4; A a;
-    cout<<sizeof(a)<<endl;// 输出 4; return 0;
+    cout<<sizeof(A)<<endl;// 输出 4; 
+  	A a;
+    cout<<sizeof(a)<<endl;// 输出 4;静态成员a不占用类的大小，所以类的大小就是b变量的大小 即4个字节 
+  	return 0;
 }
 ```
 
-静态成员a不占用类的大小，所以类的大小就是b变量的大小 即4个字节
+---
+
+##### 13.有关this指针
+
++ this指针是类的指针，指向对象的首地址。只能在成员函数中使用，在全局函数、静态成员函数中都不能用this。 
+
+
+##### 14.this指针是什么时候创建的?
+
++ this在成员函数的开始执行前构造，在成员的执行结束后清除。
+
+##### 15.this 指针存放在何处? 
+
++ this指针会因编译器不同而有不同的放置位置。可能是栈，也可能是寄存器，甚至全局变量。在
+
+##### 16. **this指针是如何传递类中的函数的**
+
++ 大多数编译器通过ecx(寄数寄存器)寄存器传递this指针。
+
++ this是通过函数参数的首参来传递的。在调用之前，编译器会把对应的对象地址放到eax中。类在实例化时，只分配类中的变量空间，并没有为函数分配空间。自从类的函数定义完成后，它就在那儿，不会跑的.
+
+##### 17. **每个类编译后，是否创建一个类中函数表保存函数指针，以便用来调用函数?**
+
++ 不论是成员函数，还是静态函数都不会创建一个函数表来保存函数指针。只有虚函数才会被放到函数表中。
++ 但是即使是虚函数，如果编译期就能明确知道调用的是哪个函数，编译器就不会通过函数表中的指针来间接调用，而是会直接利用this指针调用该函数。
+
+##### 18. 在成员函数中调用delete this会出现什么问题?对象还可以使用吗?
+
++ 当调用delete this时，类对象的内存空间被释放。在delete this之后进行的其他任何函数调用，只要不涉及到this指针的内容，都能够正常运行。一旦涉及到this指针，如操作数据成员，调用虚函数等，就会出现不可预期的问题。
+
+##### 19. 如果在类的析构函数中调用delete this，会发生什么?
+
++ 会导致堆栈溢出。delete的本质是 **“为将被释放的内存调用一个或多个析构函数，然后，释放内存”** 。显然，delete this会去调用本对象的析构函数，而析构函数中又调用delete this，形成无限递归，造成堆栈溢出，系统崩溃。
+
+##### 20. **this指针调用成员变量时，堆栈会发生什么变化?**
+
++ 当在类的非静态成员函数访问类的非静态成员时，编译器会自动将对象的地址传给作为隐含参数传递给函数，这个隐含参数就是this指针。
+
++ 当建立了类的多个对象时，在调用类的成员函数时并不知道具体是哪个对象在调用，此可以通过查看this指针来查看具。this指针首先入栈，然后成员函数的参数从右向左进行入栈，最后函数返回地址入栈。
 
 ---
 
-### 13.有关this指针
+##### 21. 拷贝构造函数与赋值运算符重载的区别
 
-+ this指针是类的指针，指向对象的首地址。
-
-+ this指针只能在成员函数中使用，在全局函数、静态成员函数中都不能用this。 107
-
-+ this指针只有在成员函数中才有定义，且存储位置会因编译器不同有不同存储位置。
-
-**this指针的用处**
-
-一个对象的this指针并不是对象本身的一部分，不会影响 sizeof(对象) 的结果。this作用域是在类内部， 当在类的**非静态成员函数**中访问类的**非静态成员**的时候(全局函数，静态函数中不能使用this指针)， 编译器会自动将对象本身的地址作为一个隐含参数传递给函数。也就是说，即使你没有写上this指针， 编译器在编译的时候也是加上this的，它作为非静态成员函数的隐含形参，对各成员的访问均通过this进 行
-
-**this指针的使用**
-
-一种情况就是，在类的非静态成员函数中返回类对象本身的时候，直接使用 `return *this;`
-
-另外一种情况是当形参数与成员变量名相同时用于区分，如 `this->n = n` (不能写成n = n)
-
-**类的this指针有以下特点**
-
-(1) **this **只能在成员函数中使用，全局函数、静态函数都不能使用this。实际上， **成员函数默认第一个参数为T \* const this**
-
-```C++
- class A{public: int func(int p){}};
-```
-
-其中， **func** 的原型在编译器看来应该是:  `int func(A* const this,int p);`
-
-(2) 由此可见， **this** 在成员函数的开始前构造，在成员函数的结束后清除。这个生命周期同任何一个函数的参数是一样的，没有任何区别。当调用一个类的成员函数时，编译器将类的指针作为函数的this参数传递进去。如:
-
-```C++
- A a;a.func(10);//此处，编译器将会编译成:A::func(&a,10);
-```
-
-看起来和静态函数没差别，对吗?不过，区别还是有的。编译器通常会对this指针做一些优化，因此， this指针的传递效率比较高，例如VC通常是通过ecx(计数寄存器)传递this参数的.
-
-#### 引申1 this指针是什么时候创建的?
-
-this在成员函数的开始执行前构造，在成员的执行结束后清除。
-
-但是如果class或者struct里面没有方法的话，它们是没有构造函数的，只能当做C的struct使用。采用 TYPE xx的方式定义的话，在栈里分配内存，这时候this指针的值就是这块内存的地址。采用new的方式 创建对象的话，在堆里分配内存，new操作符通过eax(累加寄存器)返回分配的地址，然后设置给指针 变量。之后去调用构造函数(如果有构造函数的话)，这时将这个内存块的地址传给ecx，之后构造函 数里面怎么处理请看上面的回答
-
-#### 引申2 this 指针存放在何处? 
-
-this指针会因编译器不同而有不同的放置位置。可能是栈，也可能是寄存器，甚至全局变量。在汇编级别里面，一个值只会以3种形式出现: 立即数、寄存器值和内存变量值。不是存放在寄存器就是存放在内存中，它们并不是和高级语言变量对应的。
-
-#### 引申3  **this指针是如何传递类中的函数的**
-
-大多数编译器通过ecx(寄数寄存器)寄存器传递this指针。事实上，这也是一个潜规则。一般来说，不同编译器都会遵从一致的传参规则，否则不同编译器产生的obj就无法匹配了。
-
-在call之前，编译器会把对应的对象地址放到eax中。this是通过函数参数的首参来传递的。this指针在调用之前生成，至于“类实例后函数”，没有这个说法。类在实例化时，只分配类中的变量空间，并没有为函数分配空间。自从类的函数定义完成后，它就在那儿，不会跑的
-
-#### 引申4  this指针是如何访问类中的变量的?
-
-如果不是类，而是结构体的话，那么，如何通过结构指针来访问结构中的变量呢?如果你明白这一点的话，就很容易理解这个问题了。
-
-在C++中，类和结构是只有一个区别的:类的成员默认是private，而结构是public。 
-
-this是类的指针，如果换成结构体，那this就是结构的指针了。
-
-#### 引申5 **每个类编译后，是否创建一个类中函数表保存函数指针，以便用来调用函数?**
-
-普通的类函数(不论是成员函数，还是静态函数)都不会创建一个函数表来保存函数指针。只有虚函数才会被放到函数表中。但是，即使是虚函数，如果编译期就能明确知道调用的是哪个函数，编译器就不 会通过函数表中的指针来间接调用，而是会直接调用该函数。正是由于this指针的存在，用来指向不同的对象，从而确保不同对象之间调用相同的函数可以互不干扰。
-
-#### 引申6 在成员函数中调用delete this会出现什么问题?对象还可以使用吗?
-
-在类对象的内存空间中，只有数据成员和虚函数表指针，并不包含代码内容，类的成员函数单独放在代码段中。在调用成员函数时，隐含传递一个this指针，让成员函数知道当前是哪个对象在调用它。 
-
-当调用delete this时，类对象的内存空间被释放。在delete this之后进行的其他任何函数调用，只要不涉及到this指针的内容，都能够正常运行。一旦涉及到this指针，如操作数据成员，调用虚函数等，就会出现 不可预期的问题。
-
-#### 引申7 如果在类的析构函数中调用delete this，会发生什么?
-
-会导致堆栈溢出。原因很简单，delete的本质是 **“为将被释放的内存调用一个或多个析构函数，然后，释放内存”** 。显然，delete this会去调用本对象的析构函数，而析构函数中又调用delete this，形成无限递 归，造成堆栈溢出，系统崩溃。
-
-#### 引申8 **this指针调用成员变量时，堆栈会发生什么变化?**
-
-当在类的非静态成员函数访问类的非静态成员时，编译器会自动将对象的地址传给作为隐含参数传递给 函数，这个隐含参数就是this指针。
-
-即使你并没有写this指针，编译器在链接时也会加上this的，对各成员的访问都是通过this的。
-
-例如你建立了类的多个对象时，在调用类的成员函数时，你并不知道具体是哪个对象在调用，此时你可 以通过查看this指针来查看具体是哪个对象在调用。This指针首先入栈，然后成员函数的参数从右向左进行入栈，最后函数返回地址入栈。
-
----
-
-### 14. 拷贝构造函数与赋值运算符重载的区别
-
-+  拷贝构造函数是函数，赋值运算符是运算符重载。
-+  拷贝构造函数会生成新的类对象，赋值运算符不能。
-+  拷贝构造函数是直接构造一个新的类对象，所以在初始化对象前不需要检查源对象和新建对象是否相同;赋值运算符需要上述操作并提供两套不同的复制策略，另外赋值运算符中如果原来的对象有内存分配则需要先把内存释放掉。
++  拷贝构造函数是函数，赋值运算符是运算符重载。拷贝构造函数会生成新的类对象，赋值运算符不能。
++  拷贝构造函数是直接构造一个新的类对象，所以在初始化对象前不需要检查源对象和新建对象是否相同；赋值运算符需要检查是否和源对象相同，另外赋值运算符中如果原来的对象有内存分配则需要先把内存释放掉。
 +  形参传递是调用拷贝构造函数(调用的被赋值对象的拷贝构造函数)，但并不是所有出现"="的地方 都是使用赋值运算符，如下:
 
 ```c++
@@ -1404,19 +888,29 @@ Student s1 = s; // 调用拷贝构造函数 Student s2;
 s2 = s; // 赋值运算符操作
 ```
 
-
-
-
-
-
-
 ---
 
 ## 三. STL
 
 ### STL基本介绍
 
+##### 介绍一下STL 提供六大组件
 
+**1、容器（containers）**：各种数据结构，如vector, list, deque, set, map。从实现角度看，容器是一种 class template。
+
+**2、算法（algorithms）**：各种常用的算法，如 sort, search, copy, erase…从实现角度来看，算法是一种 function template。
+
+**3、迭代器（iterators）**：扮演容器与算法之间的胶合剂，是所谓的“泛型指针”。从实现角度来看，迭代器是一种将 operator *, operator ->, operator++, operator– 等指针相关操作予以重载的class template。
+
+**4、仿函数（functors）**：行为类似函数，可以作为算法的某种策略。从实现角度来看，仿函数是一种重载了 operator() 的 class 或class template。
+
+**5、适配器（adapters）**：一种用来修饰容器或仿函数或迭代器接口的东西。例如 STL 提供的 queue 和 stack，虽然看似容器，其实只能算是一种容器适配器，因为底层由 deque 实现。
+
+**6、配置器（allocator）**：负责空间配置与管理，从实现角度来看，配置器是一个实现了动态空间配置、空间管理、空间释放的 class template。
+
+> Array 与 forward_list是 C++ 11新增的 
+
+---
 
 ### string
 
@@ -1504,6 +998,15 @@ cout << cstr1 << " " << cstr2<< endl;//OK OK
 
 ---
 
+### Array
+
+##### 介绍一下Array
+
++ `std::array` 是封装固定大小数组的容器。底层为静态数组，大小固定，不可扩容，但操作更安全。
++ 结合了 C 风格数组的性能、可访问性与容器的优点，比如可获取大小、支持赋值、随机访问迭代器等。
+
+---
+
 ### vector
 
 ##### 1.vector元素怎么排序
@@ -1552,7 +1055,7 @@ cout << cstr1 << " " << cstr2<< endl;//OK OK
   //在指定位置 loc 前插入 num 个值为 val 的元素
   void insert( iterator loc , size_type num, const TYPE &val) ; 
   //在指定位置 loc 前插入区间[ start, end)的所有元素
-  void insert( iterator loc , input_iterator start, input_iterator end) ; 
+  void insert( iterator loc , input_iterator start, input_iterator end) ;
   ```
 
 ---
@@ -1571,6 +1074,162 @@ cout << cstr1 << " " << cstr2<< endl;//OK OK
 - v.shrink_to_fit()：C++11方法，要求vector/string/deque退回多余的空间，但具体实现可忽略此要求。不保证能退回
 
 vector采用的`内存扩张策略`一般是：在每次需要分配新空间时，将当前容量翻倍。但具体实现可使用不同策略
+
+---
+
+##### vector的迭代器类型与数据成员
+
++ 迭代器类型： `Random Access Iterator` 
++ 数据成员：三个迭代器(指针) `first,last,end`
+
+---
+
+##### Vector 上常见操作的复杂度（效率）
+
+- 随机访问——常数 *O(1)*
+- 在结尾或起始插入或移除元素——常数 *O(1)*
+- 插入或移除元素——线性 *O(n)*
+
+---
+
+### deque
+
+##### 介绍一下 deque
+
++ `std::deque` （ double-ended queue ，双端队列）是有下标顺序容器，它允许在其首尾两段快速插入及删除。另外，在 deque 任一端插入或删除不会非法化指向其余元素的指针或引用。
+
+---
+
+##### 与vector比有什么优势
+
++ 与 `std::vector` 相反， deque 的元素不是相接存储的：典型实现用单独分配的固定大小数组的序列，外加额外的登记，这表示下标访问必须进行二次指针解引用，与之相比 vector 的下标访问只进行一次。
++ deque 的存储按需自动扩展及收缩。扩张 deque 比扩张vector更优，因为它不涉及到复制既存元素到新内存位置。
+
+---
+
+##### deque的迭代器类型与数据成员：
+
++ 迭代器类型： `Random Access Iterator`
++ 数据成员：一个迭代器，内部拥有四个指针 `head, tail, cur, node`
+
+---
+
+##### deque 上常见操作的复杂度（效率）
+
+- 随机访问——常数 *O(1)*
+- 在结尾或起始插入或移除元素——常数 *O(1)*
+- 插入或移除元素——线性 *O(n)*
+
+---
+
+### forward_list
+
+##### 介绍一下 forward_list
+
++ `std::forward_list` 是支持从容器中的任何位置快速插入和移除元素的容器。不支持快速随机访问。它实现为单链表，且实质上与其在 C 中实现相比无任何开销。
++ 与 `std::list` 相比，此容器在不需要双向迭代时提供更有效地利用空间的存储。
+
++ 在链表内或跨数个链表添加、移除和移动元素，不会非法化当前指代链表中其他元素的迭代器。然而，在从链表移除元素时，指代对应元素的迭代器或引用会被非法化。
+
+---
+
+##### forward_list 操作
+
+```c++
+lst.insert_after(p,...);//p为迭代器
+emplace_after(p,args);  //在p位置后面构建一个元素
+lst.erase_after(p);			//删除 p 后面的元素
+lst.erase_after(b,e);		//删除 [b,e) 之间的元素
+```
+
+- 对forward_list（单向链表）的元素做插入/删除，需要知道其`前驱`。
+- forward_list的插入/删除改变的不是指定元素，而是指定元素之后的一个元素
+- forward_list定义了`before_begin`迭代器，它指向首元素之前，称为`首前迭代器` ，不能解引用
+
+---
+
+##### forward_list的迭代器类型与数据成员：
+
++ 迭代器类型： `Forward Iterator` ，不支持 -- 操作，其余都支持
++ 数据成员：一个指针 `head` ,表示头结点
+
+---
+
+##### forward_list 上常见操作的复杂度（效率）
+
+- 插入或移除元素——常数 *O(1)*
+- 查询操作——线性 *O(n)*
+
+---
+
+### list
+
+##### 介绍一下list
+
++ `std::list` 是支持常数时间从容器任何位置插入和移除元素的容器。不支持快速随机访问。它通常实现为双向链表。与 `std::forward_list` 相比，此容器提供双向迭代但在空间上效率稍低。
++ 在 list 内或在数个 list 间添加、移除和移动元素不会非法化迭代器或引用。迭代器仅在对应元素被删除时非法化。
+
+---
+
+##### list的迭代器类型与数据成员：
+
++ 迭代器类型： `Bidirectional Iterator` ，支持 -- 操作
++ 数据成员：一个尾指针 `node` ,实现环状链表
+
+---
+
+##### list 上常见操作的复杂度（效率）
+
+- 插入或移除元素——常数 *O(1)*
+- 查询操作——线性 *O(n)* 
+
+---
+
+### map
+
+
+
+### set
+
+
+
+### unordered_map 与 unordered_set
+
+##### 介绍一下
+
++ multimap， unordered_set是关联容器，底层由 哈希表 实现。在内部，元素并不以任何特别顺序排序，而是组织进桶中，元素被放入哪个桶完全依赖其值的哈希。 两者的差别在于前者重复key 或者 重复 value 。STL默认使用拉链法来解决哈希冲突问题
+
+---
+
+##### 迭代器类型与数据成员：
+
++ 迭代器类型： `Forward Iterator` 
++ 数据成员：
+  + 一个指针指向哈希表；
+  + 哈希表内部成员：
+    + 一个 size_t 变量表示哈希表中元素数量
+    + 一个内部存放 node 结点指针的 vector
+
+---
+
+##### 常见操作的复杂度（效率）
+
+- 插入，移除以及查询元素——常数 *O(1)*
+
+  
+
+
+
+
+
+
+
+
+
+### 容器适配器
+
++ Queue 先进先出，stack 先进后出；底层默认由 deque 实现
++ Priority_queue 优先队列，底层由 vector 实现，默认为大顶堆，提供 *O(1)* 复杂度的最大元素查询，  $O(logn)$ 代价的插入与释出
 
 ---
 
@@ -1977,48 +1636,80 @@ vector采用的`内存扩张策略`一般是：在每次需要分配新空间时
 * 利用标准库容器封装char，实现自动增长的缓冲区；
 * 基于小根堆实现的定时器，关闭超时的非活动连接；
 
-+  **介绍一下你的WebServer项目**
-   + 自己用C++11改写了一个简单的Reactor高并发模型服务器。主线程初始化一个线程池，然后进行绑定IP与端口，创建socket socketfd，利用IO复用技术Epoll创建epoll模型efd，将socketfd添加至EPOLL中，进行监听事件与数据读写。定义httpconn类封装任务事件，定义httpconn类数组users；
-   + 如果监听到连接事件发生，则进行accpet连接，新建socket文件描述符 connfd ，然后将连接的用户数据放入 users 数组中并初始化，顺便添加至epoll中进行监听。
-   + 如果有EPOLLIN事件，则先将对应connfd的数据一次性读完，然后将任务添加到线程池中的任务队列中，让线程池中的线程进行逻辑任务操作，即解析HTTP请求，生成响应发送。
-   + 如果有EPOLLOUT事件，则将将数据一次性写完
+---
+
+##### 介绍一下项目的流程
+
++ epoll事件进行监听，如果有读事件，则主线程直接调用 read 将数据全部读入缓冲区
++ 数据读完之后，将任务封装成 http_conn 类，线程池中子线程取出一个任务，执行任务中的process函数
+  + 首先解析 HTTP 请求
+  + 根据 HTTP 请求寻找资源，生成HTTP响应，通过分散写的方式将 响应头与响应文件一起写入
++ 当epoll监听到写事件时，主线程直接调用 write 将数据写给客户端进程
 
 ---
 
-+  **介绍一下服务器程序中的事件处理模式**
-  + 简单介绍：
-    + Reactor模式：利用I/O复用，让主线程调用 epoll_wait 等待 socket 上有数据可读与可写。当epoll_wait 通知主线程后，主线程将 socket 事件放入请求队列，唤醒的线程来处理数据的读写与后续的业务逻辑
-    + Proactor模式：利用 异步I/O aio_read 与 aio_write 让内核来进行 socket 的读写操作，等操作完成后内核通知主线程，主线程将唤醒工作线程来处理后续的业务逻辑与事件注册
-    + 同步IO模拟Proactor模式： 主线程调用 epoll_wait 等待 socket 上有数据可读与可写。当epoll_wait 通知主线程后，主线程将数据读完之后封装成请求队列中的元素，唤醒工作线程完成后续的逻辑业务与事件注册。
-  + **Reactor模式**
-    + 要求主线程 (I/O处理单元) 只负责监听文件描述上是否有事件发生，有则立即将该事件通知工作线程(逻辑单元)，将socket可读可写事件放入请求队列，交给工作线程处理。除此之外，工作线程不做任何实质性的工作。读写数据，连接新的连接，处理客户请求接在工作线程完成。
-    + 使用同步 I/O 模型实现的工作流程：
-      1. 主线程 在epoll 内核事件表中注册 socket 的读就绪事件
-      2. 主线程调用 epoll_wait 等待 socket 上有数据可读
-      3. 有数据可读时，epoll_wait 通知主线程，主线程将 socket 可读事件放入请求队列
-      4. 睡眠在请求队列中的某个工作线程被唤醒，它从socket 读取数据，并处理客户请求，然后往 epoll 事件表中注册 socket 上的写就绪事件
-      5. 主线程调用 epoll_wait 等待 socket 可写
-      6. socket 可写时， epoll_wait 通知主线程，主线程将 socket 可写事件放入请求队列
-      7. 睡眠在请求队列中的某个工作线程被唤醒，它往 socket 上写入服务器处理客户请求的结果
-  +  **Proactor模式：**
-    + 将所有I/O操作都交给主线程和内核处理(读写)，工作线程只负责业务逻辑。
-    + 使用异步I/O模型实现的工作流程：
-      1. 主线程调用 aio_read 函数向内核注册 socket 上的读完成事件，并告诉内核 用户读缓冲区的位置，以及读操作完成时如何通知应用程序，可用信号
-      2. 主线程继续处理其他逻辑
-      3. 当 socket 上的数据被读入用户缓冲区后，内核将向应用程序发送信号，通知数据可用
-      4. 应用程序预先定义的信号处理函数选择一个工作线程来处理客户请求。处理完成之后调用 aio_write 函数向内核注册 socket 上的写完成事件，并告诉内核 用户写缓冲区的位置，以及写操作完成时如何通知应用程序
-      5. 主线程继续处理其他逻辑
-      6. 当用户缓冲区数据写入 socket 后，内核将向应用程序发送信号，通知数据已发送
-      7. 应用程序预先定义的信号处理函数选择一个工作线程做善后工作，比如是否关闭socket
-  +  **同步I/O模拟Proactor模式：**
-    + 主线程执行数据读写操作，完成之后主线程向工作线程通知这一"完成事件"。从工作线程的角度看，它们只需对读写的结果进行逻辑处理。
-    + 使用同步 I/O 模型模拟出Proactor模式的工作流程如下：
-      1. 主线程 在epoll 内核事件表中注册 socket 的读就绪事件
-      2. 主线程调用 epoll_wait 等待 socket 上有数据可读
-      3. 有数据可读时，epoll_wait 通知主线程，主线程从 socket 中循环读完数据，将数据封装成一个请求对象放入请求队列
-      4. 睡眠在请求队列中的某个工作线程被唤醒，它获得请求对象并处理客户请求，然后往 epoll 事件表中注册 socket 上的写就绪事件
-      5. 主线程调用 epoll_wait 等待 socket 可写
-      6. socket 可写时， epoll_wait 通知主线程，主线程往 socket 上写入服务器处理客户请求的结果
++ 解析消息的流程process
+  + 解析消息 process_read
+    + 当解析遇到空行时，说明消息头部字段解析完成，接下来解析的就是消息体
+    + 如果不是空行，则进行解析消息头的各个信息，比如connect，等等
+    + 等消息解析完之后就去分析目标文件的属性
+  + 分析目标文件的属性 do_request
+    + 将服务器中的资源根目录与请求内容结合，找到对应的资源的路径
+    + 然后分析路径与权限是否合法
+    + 最后打开寻找的路径的文件，创建内存映射，将需要写回的资源映射到地址上，等待之后的发送
+  + 生成响应 process_write
+    + 判断解析请求的返回值，根据请求结果来做对应的操作，如No resource等
+      + 添加响应状态行，响应头
+    + 将消息头和消息体分散写 write，使用writv
+      + 消息头就是上面根据请求来设置的消息头内容
+      + 消息体是mmap映射的资源
+
+---
+
+##### **介绍一下你的WebServer项目**
+
++ 自己用C++11改写了一个简单的Reactor高并发模型服务器。主线程初始化一个线程池，然后进行绑定IP与端口，创建socket socketfd，利用IO复用技术Epoll创建epoll模型efd，将socketfd添加至EPOLL中，进行监听事件与数据读写。定义httpconn类封装任务事件，定义httpconn类数组users；
++ 如果监听到连接事件发生，则进行accpet连接，新建socket文件描述符 connfd ，然后将连接的用户数据放入 users 数组中并初始化，顺便添加至epoll中进行监听。
++ 如果有EPOLLIN事件，则先将对应connfd的数据一次性读完，然后将任务添加到线程池中的任务队列中，让线程池中的线程进行逻辑任务操作，即解析HTTP请求，生成响应发送。
++ 如果有EPOLLOUT事件，则将将数据一次性写完
+
+---
+
+##### **介绍一下服务器程序中的事件处理模式**
+
++ 简单介绍：
+  + Reactor模式：利用I/O复用，让主线程调用 epoll_wait 等待 socket 上有数据可读与可写。当epoll_wait 通知主线程后，主线程将 socket 事件放入请求队列，唤醒的线程来处理数据的读写与后续的业务逻辑
+  + Proactor模式：利用 异步I/O aio_read 与 aio_write 让内核来进行 socket 的读写操作，等操作完成后内核通知主线程，主线程将唤醒工作线程来处理后续的业务逻辑与事件注册
+  + 同步IO模拟Proactor模式： 主线程调用 epoll_wait 等待 socket 上有数据可读与可写。当epoll_wait 通知主线程后，主线程将数据读完之后封装成请求队列中的元素，唤醒工作线程完成后续的逻辑业务与事件注册。
++ **Reactor模式**
+  + 要求主线程 (I/O处理单元) 只负责监听文件描述上是否有事件发生，有则立即将该事件通知工作线程(逻辑单元)，将socket可读可写事件放入请求队列，交给工作线程处理。除此之外，工作线程不做任何实质性的工作。读写数据，连接新的连接，处理客户请求接在工作线程完成。
+  + 使用同步 I/O 模型实现的工作流程：
+    1. 主线程 在epoll 内核事件表中注册 socket 的读就绪事件
+    2. 主线程调用 epoll_wait 等待 socket 上有数据可读
+    3. 有数据可读时，epoll_wait 通知主线程，主线程将 socket 可读事件放入请求队列
+    4. 睡眠在请求队列中的某个工作线程被唤醒，它从socket 读取数据，并处理客户请求，然后往 epoll 事件表中注册 socket 上的写就绪事件
+    5. 主线程调用 epoll_wait 等待 socket 可写
+    6. socket 可写时， epoll_wait 通知主线程，主线程将 socket 可写事件放入请求队列
+    7. 睡眠在请求队列中的某个工作线程被唤醒，它往 socket 上写入服务器处理客户请求的结果
++  **Proactor模式：**
+  + 将所有I/O操作都交给主线程和内核处理(读写)，工作线程只负责业务逻辑。
+  + 使用异步I/O模型实现的工作流程：
+    1. 主线程调用 aio_read 函数向内核注册 socket 上的读完成事件，并告诉内核 用户读缓冲区的位置，以及读操作完成时如何通知应用程序，可用信号
+    2. 主线程继续处理其他逻辑
+    3. 当 socket 上的数据被读入用户缓冲区后，内核将向应用程序发送信号，通知数据可用
+    4. 应用程序预先定义的信号处理函数选择一个工作线程来处理客户请求。处理完成之后调用 aio_write 函数向内核注册 socket 上的写完成事件，并告诉内核 用户写缓冲区的位置，以及写操作完成时如何通知应用程序
+    5. 主线程继续处理其他逻辑
+    6. 当用户缓冲区数据写入 socket 后，内核将向应用程序发送信号，通知数据已发送
+    7. 应用程序预先定义的信号处理函数选择一个工作线程做善后工作，比如是否关闭socket
++  **同步I/O模拟Proactor模式：**
+  + 主线程执行数据读写操作，完成之后主线程向工作线程通知这一"完成事件"。从工作线程的角度看，它们只需对读写的结果进行逻辑处理。
+  + 使用同步 I/O 模型模拟出Proactor模式的工作流程如下：
+    1. 主线程 在epoll 内核事件表中注册 socket 的读就绪事件
+    2. 主线程调用 epoll_wait 等待 socket 上有数据可读
+    3. 有数据可读时，epoll_wait 通知主线程，主线程从 socket 中循环读完数据，将数据封装成一个请求对象放入请求队列
+    4. 睡眠在请求队列中的某个工作线程被唤醒，它获得请求对象并处理客户请求，然后往 epoll 事件表中注册 socket 上的写就绪事件
+    5. 主线程调用 epoll_wait 等待 socket 可写
+    6. socket 可写时， epoll_wait 通知主线程，主线程往 socket 上写入服务器处理客户请求的结果
 
 ---
 
@@ -2060,6 +1751,13 @@ cond.notify_one();
 
 +  项目里实现了哪些HTTP请求呢，处理的时候如何分辨这些请求呢？
 +  设想这样一种场景，我的web服务器里面有一张表格，现在浏览器需要请求这个表格中 id=张三 的内容，同时返回到浏览器也需要以表格的形式展现。
+
+---
+
+##### 为什么需要定时器
+
++ 因为系统中的文件描述符资源有限，如果一直存在不活跃的文件描述符，会消耗文件资源
++ 
 
 ---
 
