--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -3082,7 +3082,7 @@ int main() {
 + 关系型数据库
   + 采用关系模型来组织数据的数据库。关系模式简单来说就是二维表格模型。代表：SQL Server,Oracle,Mysql
   + 优点：
-    + 容易理解，二维表的结构非常贴近现实世界，二维表格，容易理解。
+    + 容易理解，二维表的结构非常贴近现实世界
     + 使用方便，通用的sql语句使得操作关系型数据库非常方便。
     + 易于维护，数据库的ACID属性，大大降低了数据冗余和数据不一致的概率。
   + 缺点：
@@ -3095,7 +3095,8 @@ int main() {
     + 基于键值对，数据的扩展性很好。 
     + 支持多种类型数据的存储，如图片，文档等等。
   + 缺点：
-    + 由于Nosql约束少，不能像sql那样提供where字段属性的查询。因此适合存储较为简单的数据。有一些不能够持久化数据，所以需要和关系型数据库结合。
+    + 由于Nosql约束少，不能像sql那样通过字段属性的查询。适合存储较为简单的数据。
+    + 有一些不能够持久化数据，所以需要和关系型数据库结合。
 
 ---
 
@@ -3106,40 +3107,46 @@ int main() {
 3. 查询缓存(存在缓存则直接返回，不存在则执行后续操作)->
 4. 分析器 (对SQL进行词法分析和语法分析操作) ->
 5. 优化器(主要对执行的sql优化选择最优的执行方案方法) ->
-6. 执行器(执行时会先看用户是否有执行权限，有才去使用这个引擎提供的接口)-> 
+6. 执行器(查看是否有执行权限，然后使用引擎提供的接口)-> 
 7. 去引擎层获取数据返回(如果开启查询缓存则会缓存查询结果)
 
 ---
 
-#####  **你了解MySQL的内部构造吗?**
+##### 3. **你了解MySQL的内部构造吗?**
 
 以分为服务层和存储引擎层两部分：
 
-+ 服务层： **连接器、查询缓存、分析器、优化器、执行器等**，涵盖MySQL的大多数核心服务功能，以及所有的内置函数(如日期、时间、数学和加密函数等)，所有跨存储引擎的功能都在这一层实现，比如存储过程、触发器、视图等。
-+ 存储引擎层：**负责数据的存储和提取**。其架构模式是插件式的，支持InnoDB、MyISAM、Memory等多个 存储引擎。现在最常用的存储引擎是InnoDB
++ 服务层： **连接器、查询缓存、分析器、优化器、执行器等**，涵盖MySQL的大多数核心服务功能，以及所有的内置函数，跨存储引擎的功能都在这一层实现，比如存储过程、触发器、视图等。
++ 存储引擎层：**负责数据的存储和提取**。其架构模式是插件式的，支持InnoDB、MyISAM、Memory等多个存储引擎。现在最常用的存储引擎是InnoDB
 
 ---
 
-##### 数据库引擎InnoDB与MyISAM的区别
+##### 4. 数据库引擎InnoDB与MyISAM的区别
 
-
-
-
++ MySQL5.7后的默认的事务型引擎。它被设计成为大量的短期事务，短期事务大部分情况下是正常提交的，很少被回滚。InnoDB的性能与自动崩溃恢复的特性，使得它在非事务存储需求中也很流行。优先考虑InnoDB引擎，除非有特别的原因使用其他引擎。
++ MySQL 5.1 及之前的版本，MyISAM是默认引擎。提供了大量的特性，包括压缩表、空间数据索引等。但MyISAM并不支持事务以及行级锁，缺陷是崩溃后无法安全恢复。
++ 区别：
+  + 事务: InnoDB 是事务型的，可以使用 Commit 和 Rollback 语句。
+  +  并发: MyISAM 只支持表级锁，而 InnoDB 还支持行级锁。 
+  + 外键: InnoDB 支持外键。
+  + 备份: InnoDB 支持在线热备份。
+  + 崩溃恢复: MyISAM 崩溃后发生损坏的概率比 InnoDB 高很多，而且恢复的速度也更慢。
+  +  其它特性: MyISAM 支持压缩表和空间数据索引。
 
 ---
 
-##### 数据库并发事务会带来什么问题
+##### 5.数据库并发事务会带来什么问题
 
 数据库并发会带来脏读、幻读、丢弃更改、不可重复读这四个常见问题，其中:
 
-+  **脏读** :在第一个修改事务和读取事务进行的时候，读取事务读到的数据为100，这是修改之后的数据， 但是之后该事务满足一致性等特性而做了回滚操作，那么读取事务得到的结果就是脏数据了。
-+  **幻读** ：一般是T1在某个范围内进行修改操作(增加或者删除)，而T2读取该范围导致读到的数据是修改之间的了，强调范围。
-+  **丢弃修改** : 两个写事务T1，T2同时对A=0进行递增操作，结果T2覆盖T1，导致最终结果是1 而不是2，事务被覆盖
-+  **不可重复读** : T2 读取一个数据，然后T1 对该数据做了修改。如果 T2 再次读取这个数据，此时读取的 结果和第一次读取的结果不同。
++  **脏读** :在第一个修改事务和读取事务进行的时候，读取事务读到的数据为100，这是修改之后的数据后为满足一致性等特性而做了回滚操作，那么读取事务得到的结果就是脏数据了。
++  **幻读** ：一般是T1在某个范围内进行修改操作(增加或者删除)，而T2读取该范围导致读到的数据是修改之后不同的数据；强调范围和新增/删除
++  **丢弃修改** : T1 和 T2 两个事务都对一个数据进行修改，T1 先修改，T2 随后修改，T2 的修改覆盖了 T1 的修改。
++  **不可重复读** : T2 读取一个数据，然后T1 对该数据做了修改。如果 T2 再次读取这个数据，此时读取的结果和第一次读取的结果不同。
 
 ---
 
-##### **不可重复读和幻读区别是什么?可以举个例子吗?**
+##### 6. **不可重复读和幻读区别是什么?可以举个例子吗?**
 
 +  **不可重复读的重点是修改，幻读的重点在于新增或者删除。**
   + (同样的条件, 读取过的数据, 再次读取出来发现值不一样了 ):事务1中的A先生读取自己的工资为 1000的操作还没完成，事务2中的B先生就修改了A的工资为2000，导致A再读自己的工资时工资 变为 2000 ;这就是不可重复读。
@@ -3147,7 +3154,7 @@ int main() {
 
 ---
 
-##### **数据库悲观锁和乐观锁的原理和应用场景分别有什么?**
+##### 7. **数据库悲观锁和乐观锁的原理和应用场景分别有什么?**
 
 +  悲观锁，先获取锁，再进行业务操作，一般就是利用类似 SELECT ... FOR UPDATE 这样的语句，对数据加锁，避免其他事务意外修改数据。
   + 当数据库执行SELECT ... FOR UPDATE时会获取被select中的数据行的行锁，select for update获取的行锁会在当前事务结束时自动释放，因此必须在事务中使用。
@@ -3238,7 +3245,7 @@ int main() {
 +  **反范式优化** :比如适当加冗余等(减少join)
 +  **限定数据的范围**: 务必禁止不带任何限制数据范围条件的查询语句
 +   **读写分离**: 经典的数据库拆分方案，主库负责写，从库负责读
-+  **拆分表** :分区将数据在物理上分隔开，不同分区的数据可以制定保存在处于不同磁盘上的数据文件里。这样，当对这个表进行查询时，只需要在表分区中进行扫描，而不必进行全表扫描，明显缩短查询时间
++  **拆分表** :分区将数据在物理上 [面经1️⃣.md](面经1️⃣.md) 分隔开，不同分区的数据可以制定保存在处于不同磁盘上的数据文件里。这样，当对这个表进行查询时，只需要在表分区中进行扫描，而不必进行全表扫描，明显缩短查询时间
 
 ---
 
